update po files rc branch

--- a/po/ar.po
+++ b/po/ar.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2018-12-17 02:51+0200\n"
 "Last-Translator: Hazem <moustafagamal@hotmail.com>\n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -215,16 +215,6 @@ msgstr[5] "%d تم العثور على"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-msgstr[3] ""
-msgstr[4] ""
-msgstr[5] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -629,6 +619,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "القيمه الحالية:"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "الاعدادات الافتراضية"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "الافتراضى"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "وضع الاستعداد/إعادة تشغيل"
 
 #
 msgid "<Current movielist location>"
@@ -2541,10 +2550,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "القيمه الحالية:"
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2734,10 +2739,6 @@ msgstr "الاعدادات الافتراضية"
 msgid "Default timer type"
 msgstr "حذف المؤثت"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "الاعدادات الافتراضية"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2812,10 +2813,6 @@ msgstr "حذف"
 msgid "Delete Image"
 msgstr "حذف الصورة"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "حذف مدخلات قائمة التشغيل"
-
 msgid "Delete entry"
 msgstr "حذف البند"
 
@@ -2835,6 +2832,10 @@ msgstr "حذف مدخلات قائمة التشغيل"
 #
 msgid "Delete saved playlist"
 msgstr "حذف قائمة العرض المحفوظة"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "حذف مدخلات قائمة التشغيل"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3355,9 +3356,6 @@ msgid "Electronic Program Guide"
 msgstr "دليل البرنامج الالكترونى"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6308,10 +6306,6 @@ msgstr "إيقاف العرض مؤقتا"
 msgid "Pause/Continue playback"
 msgstr "استمرار العرض"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "وضع الاستعداد/إعادة تشغيل"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6837,7 +6831,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "أضغط موافق من الريموت كنترول للمتابعة."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "اضغط OK لتنشيط السمة المحددة."
 
 #
@@ -6852,7 +6846,7 @@ msgid "Press OK to get further details for %s"
 msgstr "أضغط موالق للحصول على تفاصيل أكثر عن %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "اضغط OK لتنشيط السمة المحددة."
 
 #
@@ -7930,6 +7924,11 @@ msgstr "اختيار الفيلم"
 
 msgid "Select a network adapter"
 msgstr "أختيار محول الشبكة"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "اختيار القرص الصلب"
 
 #
 msgid "Select a tuner"
@@ -10511,9 +10510,6 @@ msgid "Updating software catalog"
 msgstr "جارى تحديث فهرس النظام"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
