--- a/po/bg.po
+++ b/po/bg.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 3.0.0\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-06-13 10:10+0300\n"
 "Last-Translator: Мартин Петков <marto74bg@yahoo.co.uk>\n"
 "Language-Team: Bulgarian\n"
@@ -203,12 +203,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d ядро"
 msgstr[1] "%d ядра"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -560,6 +554,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - по подразбиране (деактивиран)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "< Текущ >"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<По подразбиране + Пикон>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "По подразбиране"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Аварийно >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< Очаква рестарт >"
 
 msgid "<Current movielist location>"
 msgstr "<Текущо местоположение на списъка с филми>"
@@ -2385,10 +2399,6 @@ msgstr "Куба"
 msgid "Curacao"
 msgstr "Курасао"
 
-#, fuzzy
-msgid "Current"
-msgstr "< Текущ >"
-
 msgid "Current CEC address"
 msgstr "Текущ CEC адрес"
 
@@ -2574,10 +2584,6 @@ msgstr "Стандартни Настройки"
 msgid "Default timer type"
 msgstr "Тип на таймера по подразбиране"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<По подразбиране + Пикон>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Задайте местоположението на EPG кеш файла."
 
@@ -2650,10 +2656,6 @@ msgstr "Изтриване"
 msgid "Delete Image"
 msgstr "Изтриване на Имидж"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Изтрийте целия текст"
-
 msgid "Delete entry"
 msgstr "Изтриване запис"
 
@@ -2671,6 +2673,10 @@ msgstr "Изтриване на записа в плейлиста"
 
 msgid "Delete saved playlist"
 msgstr "Изтриване на записания плейлист"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Изтрийте целия текст"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Изтрийте символа отляво на текстовия курсор"
@@ -3148,10 +3154,6 @@ msgstr "Електронен Програмен Гайд"
 
 msgid "Embedded"
 msgstr "Вградени"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Аварийно >"
 
 msgid "Empty slot"
 msgstr "Празен слот"
@@ -5860,10 +5862,6 @@ msgstr "Пауза на възпроизвеждането"
 msgid "Pause/Continue playback"
 msgstr "Пауза/Продължение на възпроизвеждането"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< Очаква рестарт >"
-
 msgid "Percentage left"
 msgstr "Процента отляво"
 
@@ -6345,7 +6343,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Натиснете ОК на Вашето дистанционно за да продължите."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Натиснете OK за активиране на избрания%s скин."
 
 msgid "Press OK to activate the settings."
@@ -6359,7 +6357,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Натиснете ОК за повече детайли относно %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Натиснете OK за активиране на избрания%s скин."
 
 msgid "Press OK to scan"
@@ -7356,6 +7354,10 @@ msgstr "Изберете филм"
 
 msgid "Select a network adapter"
 msgstr "Изберете Мрежов Адаптер"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Изберете действие"
 
 msgid "Select a tuner"
 msgstr "Изберете тунер"
@@ -9713,10 +9715,6 @@ msgstr "Актуализирам софтуер каталога"
 
 msgid "Upper case"
 msgstr "Главни букви"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Tаймер за Сън"
 
 msgid "Uruguay"
 msgstr "Уругвай"
