--- a/po/ca.po
+++ b/po/ca.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-10 20:14+0200\n"
 "Last-Translator: Oriol Pellicer <oriol@elsud.org>\n"
 "Language-Team: angelodos angelo2807@hotmail.com\n"
@@ -217,12 +217,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d cores"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -614,6 +608,28 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - predeterminat (desactivat)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "<Actual>"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Predeterminat + picó>"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Per defecte"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Emergencia >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "<Pendent de reiniciar>"
 
 #
 msgid "<Current movielist location>"
@@ -2638,10 +2654,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "<Actual>"
-
 msgid "Current CEC address"
 msgstr "Adreça actual del CEC"
 
@@ -2857,11 +2869,6 @@ msgstr "Configuració per defecte"
 msgid "Default timer type"
 msgstr "Tipus de temporitzador predeterminat"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Predeterminat + picó>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Definiu la ubicació del fitxer de memòria cau EPG."
 
@@ -2938,11 +2945,6 @@ msgid "Delete Image"
 msgstr "Ha fallat l'eliminació"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Esborrar entrada de la llista"
-
-#
 msgid "Delete entry"
 msgstr "Esborrar entrada"
 
@@ -2965,6 +2967,11 @@ msgstr "Esborrar entrada de la llista"
 #
 msgid "Delete saved playlist"
 msgstr "Esborrar llista gravada"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Esborrar entrada de la llista"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3521,10 +3528,6 @@ msgstr "Guia electrònica de programes"
 
 msgid "Embedded"
 msgstr "Incrustat"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Emergencia >"
 
 msgid "Empty slot"
 msgstr "Ranura buida"
@@ -6560,10 +6563,6 @@ msgstr "Pausa la reproducció"
 msgid "Pause/Continue playback"
 msgstr "Pausa la reproducció"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "<Pendent de reiniciar>"
-
 msgid "Percentage left"
 msgstr "Percentatge restant"
 
@@ -7126,7 +7125,7 @@ msgstr "Per continuar, premeu OK al comandament a distància."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Premeu OK per activar el% s de pell seleccionat."
 
 #
@@ -7144,7 +7143,7 @@ msgstr "Premeu OK per obtenir més detalls per a% s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Premeu OK per mantenir %s pell actualment seleccionada."
 
 #
@@ -8285,6 +8284,10 @@ msgstr "Seleccionar una pel·lícula"
 #
 msgid "Select a network adapter"
 msgstr "Selecciona interfície de xarxaSeleccioneu un adaptador de xarxa"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Selecciona l’acció"
 
 #
 msgid "Select a tuner"
@@ -10916,10 +10919,6 @@ msgstr "Actualització del catàleg de programari"
 
 msgid "Upper case"
 msgstr "Majúscula"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Sleeptimer"
 
 msgid "Uruguay"
 msgstr "Uruguai"
