--- a/po/cs.po
+++ b/po/cs.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-23 15:56+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: ims <ims21@users.sourceforge.net>\n"
 "Language-Team: PLi <ims@openpli.org>\n"
@@ -215,13 +215,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d jádro"
 msgstr[1] "%d jádra"
 msgstr[2] "%d jader"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] "%d den"
-msgstr[1] "%d dny"
-msgstr[2] "%d dnů"
 
 #, python-format
 msgid "%d file"
@@ -627,6 +620,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - výchozí (zakázáno)"
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Aktuální"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Výchozí+Pikona"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Standardní"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "Nouzový"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Čekání na restart"
 
 #
 msgid "<Current movielist location>"
@@ -2714,10 +2730,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curaçao"
 
-#
-msgid "Current"
-msgstr "Aktuální"
-
 msgid "Current CEC address"
 msgstr "Současná CEC adresa"
 
@@ -2940,10 +2952,6 @@ msgstr "Standardní nastavení"
 msgid "Default timer type"
 msgstr "Výchozí typ časovače"
 
-#
-msgid "Default+Picon"
-msgstr "Výchozí+Pikona"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Určuje umístění souboru pro EPG cache."
 
@@ -3018,9 +3026,6 @@ msgstr "Smazat"
 msgid "Delete Image"
 msgstr "Odstranit image"
 
-msgid "Delete all the text"
-msgstr "Smazat vše"
-
 #
 msgid "Delete entry"
 msgstr "smazat položku"
@@ -3043,6 +3048,10 @@ msgstr "Smazat položku playlistu"
 #
 msgid "Delete saved playlist"
 msgstr "Smazat uložený playlist"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Smazat vše"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Smazat znak před kurzorem"
@@ -3622,9 +3631,6 @@ msgstr "EPG"
 
 msgid "Embedded"
 msgstr "Vestavěný"
-
-msgid "Emergency"
-msgstr "Nouzový"
 
 msgid "Empty slot"
 msgstr "volný slot"
@@ -6730,9 +6736,6 @@ msgstr "Pauza/přehrávání"
 msgid "Pause/Continue playback"
 msgstr "Pozastavit/Pokračovat v přehrávání"
 
-msgid "Pending restart"
-msgstr "Čekání na restart"
-
 msgid "Percentage left"
 msgstr "Procenta vlevo"
 
@@ -7313,8 +7316,8 @@ msgid "Press OK on your remote control to continue."
 msgstr "Stiskněte OK na dálkovém ovladači pro pokračování."
 
 #
-#, python-format
-msgid "Press OK to activate the selected %s skin."
+#, fuzzy, python-format
+msgid "Press OK to activate the selected%s skin."
 msgstr "Stiskněte OK pro aktivaci zvoleného %s skinu."
 
 #
@@ -7331,8 +7334,8 @@ msgid "Press OK to get further details for %s"
 msgstr "Stiskněte OK a získejte detaily pro %s"
 
 #
-#, python-format
-msgid "Press OK to keep the currently selected %s skin."
+#, fuzzy, python-format
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Stiskněte OK pro zachování zvoleného %s skinu."
 
 #
@@ -8500,6 +8503,11 @@ msgstr "Vyberte film"
 #
 msgid "Select a network adapter"
 msgstr "Vyberte síťový adaptér"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Zvolte akci"
 
 #
 msgid "Select a tuner"
@@ -11188,9 +11196,6 @@ msgstr "Aktualizace katalogu programů"
 
 msgid "Upper case"
 msgstr "Velká písmena"
-
-msgid "Uptime"
-msgstr "Doba provozu"
 
 msgid "Uruguay"
 msgstr "Uruguay"
