--- a/po/da.po
+++ b/po/da.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2017-01-18 16:38+0100\n"
 "Last-Translator: lupine <a_ecklon@hotmail.com>\n"
 "Language-Team: \n"
@@ -212,12 +212,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d kerne"
 msgstr[1] "%d kerner"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -599,6 +593,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - standard (deaktiveret)"
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Nuværende værdi:"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Standard indstillinger"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Standard"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Standby / Genstarte"
 
 msgid "<Current movielist location>"
 msgstr "<Nuværende filmliste placering>"
@@ -2685,11 +2702,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Nuværende værdi:"
-
 msgid "Current CEC address"
 msgstr "Nuværende CEC Adresse"
 
@@ -2913,11 +2925,6 @@ msgstr "Standard indstillinger"
 msgid "Default timer type"
 msgstr "Slet timer"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Standard indstillinger"
-
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Konfigurer skærmens billedformat."
@@ -2994,11 +3001,6 @@ msgid "Delete Image"
 msgstr "Slet timer"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Slet afspilningslistepunkt"
-
-#
 msgid "Delete entry"
 msgstr "Slet punkt"
 
@@ -3021,6 +3023,11 @@ msgstr "Slet afspilningslistepunkt"
 #
 msgid "Delete saved playlist"
 msgstr "Slet gemt afspilningsliste"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Slet afspilningslistepunkt"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3592,9 +3599,6 @@ msgstr "Elektronisk Program Guide"
 #, fuzzy
 msgid "Embedded"
 msgstr "indlejret"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr ""
@@ -6703,11 +6707,6 @@ msgstr "Pause afspilning"
 msgid "Pause/Continue playback"
 msgstr "Pause/Fortsæt afspilning"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Standby / Genstarte"
-
 msgid "Percentage left"
 msgstr "Procent til venstre"
 
@@ -7284,7 +7283,7 @@ msgstr "Tryk OK på din fjernbetjening for at fortsætte."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Tryk OK for at aktivere det valgte grafiske tema."
 
 #
@@ -7302,7 +7301,7 @@ msgstr "Tryk på OK for at se yderligere detaljer for %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Tryk OK for at aktivere det valgte grafiske tema."
 
 #
@@ -8472,6 +8471,10 @@ msgstr "Vælg en film"
 #
 msgid "Select a network adapter"
 msgstr "Vælg en netværks adapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Vælg handling"
 
 #
 msgid "Select a tuner"
@@ -11195,10 +11198,6 @@ msgstr "Opdaterer softwarekatalog"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Sleeptimer"
 
 msgid "Uruguay"
 msgstr ""
