--- a/po/de.po
+++ b/po/de.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2019-11-28 17:53+0100\n"
 "Last-Translator: Pike_Bishop <alfredzngr023@gmail.com>\n"
 "Language-Team: Sfteam  angelo2807@hotmail.com\n"
@@ -204,12 +204,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d Prozessor-Kern"
 msgstr[1] "%d Prozessor-Kerne"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -563,6 +557,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - Standard (deaktiviert)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Aktueller Wert: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Voreinstellungen"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Standard"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Standby / Neustart"
 
 msgid "<Current movielist location>"
 msgstr "<Aktuelles Filmlisten-Verzeichnis>"
@@ -2394,10 +2407,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "Aktueller Wert: "
-
 msgid "Current CEC address"
 msgstr "Aktuelle CEC-Adresse"
 
@@ -2584,10 +2593,6 @@ msgstr "Voreinstellungen"
 msgid "Default timer type"
 msgstr "Timer löschen"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Voreinstellungen"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Definieren Sie den Speicherort der EPG-Cache-Datei."
 
@@ -2661,10 +2666,6 @@ msgstr "Löschen"
 msgid "Delete Image"
 msgstr "Lösche Image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Wiedergabelisteneintrag löschen"
-
 msgid "Delete entry"
 msgstr "Eintrag löschen"
 
@@ -2682,6 +2683,10 @@ msgstr "Wiedergabelisteneintrag löschen"
 
 msgid "Delete saved playlist"
 msgstr "Gespeicherte Wiedergabeliste löschen"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Wiedergabelisteneintrag löschen"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3159,9 +3164,6 @@ msgstr "Elektronischer Programmführer"
 
 msgid "Embedded"
 msgstr "Integriert"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr "Leerer Slot"
@@ -5896,10 +5898,6 @@ msgstr "Wiedergabe pausieren"
 msgid "Pause/Continue playback"
 msgstr "Pause / Wiedergabe fortsetzen"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Standby / Neustart"
-
 msgid "Percentage left"
 msgstr "Prozentangabe links"
 
@@ -6382,7 +6380,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "OK drücken zum Fortfahren."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "OK drücken, um den markierten Skin zu aktivieren."
 
 msgid "Press OK to activate the settings."
@@ -6396,7 +6394,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Drücken Sie OK, um weitere Details zu %s zu erhalten."
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "OK drücken, um den markierten Skin zu aktivieren."
 
 msgid "Press OK to scan"
@@ -7400,6 +7398,10 @@ msgstr "Filmauswahl"
 
 msgid "Select a network adapter"
 msgstr "Netzwerkadapter auswählen"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Wähle Vorgang"
 
 msgid "Select a tuner"
 msgstr "Tuner auswählen"
@@ -9787,10 +9789,6 @@ msgstr "Softwarekatalog wird aktualisiert."
 
 msgid "Upper case"
 msgstr "Großbuchstaben"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Ausschalt-Timer"
 
 msgid "Uruguay"
 msgstr "Uruguay"
