--- a/po/en.po
+++ b/po/en.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: satdreamgr\n"
 "Language-Team: \n"
@@ -196,12 +196,6 @@ msgstr[1] "%d services found!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -552,6 +546,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Current value: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Default settings"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Default"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Standby / restart"
 
 msgid "<Current movielist location>"
 msgstr "<Current movielist location>"
@@ -2401,10 +2414,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Current value: "
-
 msgid "Current CEC address"
 msgstr "Current CEC address"
 
@@ -2595,10 +2604,6 @@ msgid "Default timer type"
 msgstr "Timer type"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Default settings"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Configure the aspect ratio of the screen."
 
@@ -2672,10 +2677,6 @@ msgstr "Delete"
 msgid "Delete Image"
 msgstr "Delete file"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Delete playlist entry"
-
 msgid "Delete entry"
 msgstr "Delete entry"
 
@@ -2694,6 +2695,10 @@ msgstr "Delete playlist entry"
 
 msgid "Delete saved playlist"
 msgstr "Delete saved playlist"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Delete playlist entry"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3181,9 +3186,6 @@ msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -5933,10 +5935,6 @@ msgstr "Pause playback"
 msgid "Pause/Continue playback"
 msgstr "Continue playback"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Standby / restart"
-
 msgid "Percentage left"
 msgstr "Percentage left"
 
@@ -6429,7 +6427,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Press OK on your remote control to continue."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 msgid "Press OK to activate the settings."
@@ -6443,7 +6441,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Press OK to get further details for %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 msgid "Press OK to scan"
@@ -7460,6 +7458,10 @@ msgstr "Select a movie"
 
 msgid "Select a network adapter"
 msgstr "Select a network adapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Select a skin"
 
 msgid "Select a tuner"
 msgstr "Select a tuner"
@@ -9861,9 +9863,6 @@ msgid "Updating software catalog"
 msgstr "Updating software catalog"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
