--- a/po/es.po
+++ b/po/es.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-10 20:14+0200\n"
 "Last-Translator: Jose Juan <jzapater@gmail.com>\n"
 "Language-Team: ANGELODOS  angelo2807@hotmail.com\n"
@@ -215,12 +215,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d cores"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -612,6 +606,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - por defecto (desactivado)"
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "< Valor actual >"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "< Piel predeterminada + Picon >"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Por defecto"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Emergencia >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "<Pendiente de reinicio>"
 
 #
 msgid "<Current movielist location>"
@@ -2649,11 +2666,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "< Valor actual >"
-
 msgid "Current CEC address"
 msgstr "Editar la dirección fuente de actualización."
 
@@ -2867,11 +2879,6 @@ msgstr "Parámetros por Defecto"
 msgid "Default timer type"
 msgstr "Tipo de temporizador predeterminado"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "< Piel predeterminada + Picon >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Defina la ubicación del archivo EPG Cache."
 
@@ -2947,11 +2954,6 @@ msgid "Delete Image"
 msgstr "Borrar imagen"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "borrar entrada en la lista de reproducción"
-
-#
 msgid "Delete entry"
 msgstr "Borrar entrada"
 
@@ -2973,6 +2975,11 @@ msgstr "borrar entrada en la lista de reproducción"
 #
 msgid "Delete saved playlist"
 msgstr "borrar lista de reproducción guardada"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "borrar entrada en la lista de reproducción"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3522,10 +3529,6 @@ msgstr "Guía de Programación Electrónica"
 
 msgid "Embedded"
 msgstr "Incrustado"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Emergencia >"
 
 msgid "Empty slot"
 msgstr "Slot vacío"
@@ -6557,10 +6560,6 @@ msgstr "Pusar la reproducción"
 msgid "Pause/Continue playback"
 msgstr "Pausar / continuar la reproducción"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "<Pendiente de reinicio>"
-
 msgid "Percentage left"
 msgstr "Porcentaje a la izquierda"
 
@@ -7118,7 +7117,7 @@ msgstr "Pulse OK en el mando a distancia para continuar."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Presione OK para activar la piel% s seleccionada."
 
 #
@@ -7136,7 +7135,7 @@ msgstr "Pulse OK para obtener más detalles para %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Presione OK para mantener la piel% s seleccionada actualmente."
 
 #
@@ -8268,6 +8267,10 @@ msgstr "Seleccionar una película"
 #
 msgid "Select a network adapter"
 msgstr "Seleccione un adaptador de red"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Seleccione la acción"
 
 #
 msgid "Select a tuner"
@@ -10905,10 +10908,6 @@ msgstr "Actualizando el catálogo de software"
 
 msgid "Upper case"
 msgstr "Mayúsculas"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Tiempo de dormir"
 
 msgid "Uruguay"
 msgstr "Uruguay"
