--- a/po/et.po
+++ b/po/et.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Openpli\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2019-04-03 06:49+0300\n"
 "Last-Translator: \n"
 "Language-Team: Raivo, Henkka, eesatfan, rimas, zeros\\n faas, sateks, valgekotkas, tigekala, rootsikunn\\n kain, i70, mustkass, pelmeen, Scott\\n <digi-tv.ee>\n"
@@ -204,12 +204,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d tuumaga"
 msgstr[1] "%d tuumaga"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -559,6 +553,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - vakimisi (keelatud)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Praegune väärtus: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Vaikeväärtused"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Vaikimisi"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Seiskamine"
 
 msgid "<Current movielist location>"
 msgstr "<Salvestusnimekirja hetkeasukoht >"
@@ -2388,10 +2401,6 @@ msgstr "Kuuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "Praegune väärtus: "
-
 msgid "Current CEC address"
 msgstr "Praegune CEC aadress"
 
@@ -2580,10 +2589,6 @@ msgstr "Vaikeväärtused"
 msgid "Default timer type"
 msgstr "Kustuta taimer"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Vaikeväärtused"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2657,10 +2662,6 @@ msgstr "Kustuta"
 msgid "Delete Image"
 msgstr "Kustuta image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Kustuta esitusloendi kirje"
-
 msgid "Delete entry"
 msgstr "Kustuta valik"
 
@@ -2678,6 +2679,10 @@ msgstr "Kustuta esitusloendi kirje"
 
 msgid "Delete saved playlist"
 msgstr "Kustuta salvestatud esitusloend"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Kustuta esitusloendi kirje"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3164,9 +3169,6 @@ msgstr "EPG"
 #, fuzzy
 msgid "Embedded"
 msgstr "sisseehitatud"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr ""
@@ -5898,10 +5900,6 @@ msgstr "Peata taasesitus"
 msgid "Pause/Continue playback"
 msgstr "Peata/Jätka taasesitust"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Seiskamine"
-
 msgid "Percentage left"
 msgstr "Protsent vasakul"
 
@@ -6388,7 +6386,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Jätkamiseks vajuta OK."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Vajuta OK uue välimuse aktiveerimiseks."
 
 msgid "Press OK to activate the settings."
@@ -6402,7 +6400,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Vajuta OK %s üksikasjade nägemiseks"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Vajuta OK uue välimuse aktiveerimiseks."
 
 msgid "Press OK to scan"
@@ -7413,6 +7411,10 @@ msgstr "Vali salvestis"
 
 msgid "Select a network adapter"
 msgstr "Vali võrgukaart"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Vali tegevus"
 
 msgid "Select a tuner"
 msgstr "Vali tuuner"
@@ -9833,10 +9835,6 @@ msgstr "Uuendan tarkvara kataloogi"
 
 msgid "Upper case"
 msgstr "Suurtähed"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Unetaimer"
 
 msgid "Uruguay"
 msgstr "Uruguay"
