--- a/po/fa.po
+++ b/po/fa.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2018-02-14 16:51+0330\n"
 "Last-Translator: Persian Prince <persianprince@pe4k.com>\n"
 "Language-Team: Persian Professionals <persianpros@yahoo.com>\n"
@@ -199,11 +199,6 @@ msgstr[0] "%d کانال یافت شد"
 msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d هسته"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
 
 #, python-format
 msgid "%d file"
@@ -544,6 +539,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - پیش فرض (غیر فعال)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "مقدار فعلی:"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "تنظیمات پیش فرض"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "پیش فرض"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "خاموشی موقت / راه اندازی مجدد"
 
 msgid "<Current movielist location>"
 msgstr "<محل فعلی لیست فیلم>"
@@ -2438,10 +2452,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "مقدار فعلی:"
-
 msgid "Current CEC address"
 msgstr "آدرس فعلی CEC"
 
@@ -2639,10 +2649,6 @@ msgstr "تنظیمات پیش فرض"
 msgid "Default timer type"
 msgstr "نوع لیست"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "تنظیمات پیش فرض"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2716,10 +2722,6 @@ msgstr "حذف"
 msgid "Delete Image"
 msgstr "حذف ناموفق"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "حذف مورد"
-
 msgid "Delete entry"
 msgstr "حذف مورد"
 
@@ -2741,6 +2743,10 @@ msgstr "حذف مورد"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "ذخیره لیست پخش"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "حذف مورد"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3232,9 +3238,6 @@ msgid "Electronic Program Guide"
 msgstr "راهنمای الکترونیکی برنامه"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6036,10 +6039,6 @@ msgstr "ادامه پخش"
 msgid "Pause/Continue playback"
 msgstr "ادامه پخش کردن"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "خاموشی موقت / راه اندازی مجدد"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6534,7 +6533,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "دکمه OK را برای ادامه دادن فشار دهید"
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "دکمه OK را برای فعال کردن پوسته انتخاب شده فشار دهید"
 
 msgid "Press OK to activate the settings."
@@ -6548,7 +6547,7 @@ msgid "Press OK to get further details for %s"
 msgstr "دکمه OK را برای دریافت جزئیات بیشتر %s فشار دهید"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "دکمه OK را برای فعال کردن پوسته انتخاب شده فشار دهید"
 
 msgid "Press OK to scan"
@@ -7590,6 +7589,10 @@ msgstr "انتخاب فیلم"
 
 msgid "Select a network adapter"
 msgstr "انتخاب آداپتور شبکه"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "انتخاب فیلم"
 
 msgid "Select a tuner"
 msgstr "انتخاب تیونر"
@@ -10006,9 +10009,6 @@ msgid "Updating software catalog"
 msgstr ""
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
