--- a/po/fi.po
+++ b/po/fi.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-16 18:41+0200\n"
 "Last-Translator: jamu\n"
 "Language-Team: BoxFreak/jamu\n"
@@ -210,12 +210,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d ydin"
 msgstr[1] "%d ydintä"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -595,6 +589,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Arvo: "
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Oletus Teema>"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Oletus"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Sammutusvalikko"
 
 msgid "<Current movielist location>"
 msgstr "<Nykyinen tallennushakemisto>"
@@ -2606,11 +2623,6 @@ msgstr "Kuuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Arvo: "
-
 msgid "Current CEC address"
 msgstr "Käytettävä CEC-osoite"
 
@@ -2825,11 +2837,6 @@ msgstr "Oletusasetukset"
 msgid "Default timer type"
 msgstr "Poista ajastus"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Oletus Teema>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Määritä ohjelmaoppaan välimuistitiedoston sijainti."
 
@@ -2906,11 +2913,6 @@ msgid "Delete Image"
 msgstr "Poista ohjelmistokuva"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Poista soittolistan valittu kohde"
-
-#
 msgid "Delete entry"
 msgstr "Poista valinta"
 
@@ -2933,6 +2935,11 @@ msgstr "Poista soittolistan valittu kohde"
 #
 msgid "Delete saved playlist"
 msgstr "Poista tallennettu soittolista"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Poista soittolistan valittu kohde"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3496,9 +3503,6 @@ msgid "Electronic Program Guide"
 msgstr "Ohjelmaopas"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6553,11 +6557,6 @@ msgstr "Keskeytä toisto"
 msgid "Pause/Continue playback"
 msgstr "Pysäytä/Jatka toistoa"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Sammutusvalikko"
-
 msgid "Percentage left"
 msgstr "Prosentit vasemmalla"
 
@@ -7122,7 +7121,7 @@ msgstr "Jatka painamalla OK-näppäintä."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Ota valittu teema käyttöön painamalla OK."
 
 #
@@ -7140,7 +7139,7 @@ msgstr "Katso %s lisätietoja OK-näppäimellä"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Ota valittu teema käyttöön painamalla OK."
 
 #
@@ -8289,6 +8288,11 @@ msgstr "Tallennetut ohjelmat"
 #
 msgid "Select a network adapter"
 msgstr "Valitse verkkosovitin"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Valitse toiminto"
 
 #
 msgid "Select a tuner"
@@ -10954,11 +10958,6 @@ msgstr "Päivitetään ohjelmistoluetteloa"
 
 msgid "Upper case"
 msgstr "Isot kirjaimet"
-
-#
-#, fuzzy
-msgid "Uptime"
-msgstr "Uniajastin"
 
 msgid "Uruguay"
 msgstr "Uruguay"
