--- a/po/fr.po
+++ b/po/fr.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-25 12:33+0200\n"
-"PO-Revision-Date: 2020-06-24 23:31+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
+"PO-Revision-Date: 2020-06-25 13:30+0200\n"
 "Last-Translator: Pr2\n"
 "Language-Team: french\n"
 "Language: fr\n"
@@ -203,12 +203,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d coeur"
 msgstr[1] "%d coeurs"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] "%d jour"
-msgstr[1] "%d jours"
 
 #, python-format
 msgid "%d file"
@@ -560,6 +554,21 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - par défaut (désactivé)"
+
+msgid "< Current >"
+msgstr "< Actuel >"
+
+msgid "< Default + Picon >"
+msgstr "< Défaut+Picon >"
+
+msgid "< Default >"
+msgstr "< Par défaut >"
+
+msgid "< Emergency >"
+msgstr "< Urgence >"
+
+msgid "< Pending restart >"
+msgstr "< En attente de redémarrage >"
 
 msgid "<Current movielist location>"
 msgstr "<Emplacement actuel de la liste des films>"
@@ -2382,9 +2391,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-msgid "Current"
-msgstr "Actuel"
-
 msgid "Current CEC address"
 msgstr "Adresse CEC actuelle"
 
@@ -2570,9 +2576,6 @@ msgstr "Paramètres par défaut"
 msgid "Default timer type"
 msgstr "Type de programmation par défaut"
 
-msgid "Default+Picon"
-msgstr "Défaut+Picon"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Définir la localisation du fichier de cache EPG."
 
@@ -2645,9 +2648,6 @@ msgstr "Supprimer"
 msgid "Delete Image"
 msgstr "Supprimer l’image"
 
-msgid "Delete all the text"
-msgstr "Supprimer tout le texte"
-
 msgid "Delete entry"
 msgstr "Supprimer l’entrée"
 
@@ -2665,6 +2665,9 @@ msgstr "Supprimer l’entrée de la liste de lecture"
 
 msgid "Delete saved playlist"
 msgstr "Supprimer la liste de lecture sauvegardée"
+
+msgid "Delete the all the text"
+msgstr "Supprimer tout le texte"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Supprimer le caractère à gauche du curseur du texte"
@@ -3142,9 +3145,6 @@ msgstr "Guide électronique programme (EPG)"
 
 msgid "Embedded"
 msgstr "Embarqué"
-
-msgid "Emergency"
-msgstr "Urgence"
 
 msgid "Empty slot"
 msgstr "Emplacement vide."
@@ -5852,9 +5852,6 @@ msgstr "Reprise de la lecture"
 msgid "Pause/Continue playback"
 msgstr "Pause/Continue la lecture"
 
-msgid "Pending restart"
-msgstr "En attente de redémarrage"
-
 msgid "Percentage left"
 msgstr "Pourcentage gauche"
 
@@ -6336,7 +6333,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Appuyez sur OK de votre télécommande pour continuer."
 
 #, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Appuyez sur OK pour activer le thème sélectionné %s."
 
 msgid "Press OK to activate the settings."
@@ -6349,8 +6346,8 @@ msgstr "Appuyez sur OK pour éditer les paramètres."
 msgid "Press OK to get further details for %s"
 msgstr "Appuyez sur OK pour avoir des détails sur %s"
 
-#, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+#, python-format
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Appuyez sur OK pour conserver le thème actuellement sélectionné %s."
 
 msgid "Press OK to scan"
@@ -7347,6 +7344,9 @@ msgstr "Sélectionner un film"
 
 msgid "Select a network adapter"
 msgstr "Sélectionner un adaptateur réseau"
+
+msgid "Select a skin"
+msgstr "Sélectionner un skin/thème"
 
 msgid "Select a tuner"
 msgstr "Sélectionner un tuner"
@@ -9721,9 +9721,6 @@ msgstr "Mise à jour du catalogue logiciel"
 
 msgid "Upper case"
 msgstr "Majuscules"
-
-msgid "Uptime"
-msgstr "Durée de fonctionnement"
 
 msgid "Uruguay"
 msgstr "Uruguay"
