--- a/po/fy.po
+++ b/po/fy.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2008-12-29 16:22+0100\n"
 "Last-Translator: gerrit <gerrit@nedlinux.nl>\n"
 "Language-Team: gerrit <fy@li.org>\n"
@@ -209,12 +209,6 @@ msgstr[1] "%d services fûn"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -608,6 +602,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+msgid "< Current >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Wyzigje ynstellingen"
+
+msgid "< Default >"
+msgstr ""
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Paraatmode / Nijstart"
 
 #
 msgid "<Current movielist location>"
@@ -2702,9 +2715,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-msgid "Current"
-msgstr ""
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2938,11 +2948,6 @@ msgstr "Wyzigje ynstellingen"
 msgid "Default timer type"
 msgstr "Tiidsbarren type"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Wyzigje ynstellingen"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -3019,11 +3024,6 @@ msgid "Delete Image"
 msgstr "triem ferwiderje"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "ofspiellyst rigele ferwiderje"
-
-#
 msgid "Delete entry"
 msgstr "Ferwiderje ynfier"
 
@@ -3050,6 +3050,11 @@ msgstr "ofspiellyst rigele ferwiderje"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "ferwiderje opsleine ofspiellyst"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "ofspiellyst rigele ferwiderje"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3619,9 +3624,6 @@ msgid "Electronic Program Guide"
 msgstr "Elektroniske Programma Gids"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6775,11 +6777,6 @@ msgstr "Fierder gean mei ôfspieljen"
 msgid "Pause/Continue playback"
 msgstr "Kontinu spielje"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Paraatmode / Nijstart"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -7356,7 +7353,7 @@ msgstr "Druk OK op of ôfstandsbestjinning om fierder te gean."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Druk Ok om ynstellingen aktief te meitsjen."
 
 #
@@ -7374,7 +7371,7 @@ msgstr ""
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Druk OK om dizze ynstellingen te bewurkjen"
 
 #
@@ -8563,6 +8560,11 @@ msgstr "Kies in film"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Kies Netwurk Adapter"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Kies in film"
 
 #
 #, fuzzy
@@ -11290,9 +11292,6 @@ msgid "Updating software catalog"
 msgstr ""
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
