--- a/po/hr.po
+++ b/po/hr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-11 12:22+0200\n"
 "Last-Translator: Željko <zeljko2@hi.ht.hr>\n"
 "Language-Team: Željko\n"
@@ -205,13 +205,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d jezgra"
 msgstr[1] "%d jezgre"
 msgstr[2] "%d jezgri"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -572,6 +565,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - zadano (onemogućeno)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "< Trenutno >"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "< Zadano + pikon >"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Zadano"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Hitna pomoć >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< U tijeku je ponovno pokretanje >"
 
 msgid "<Current movielist location>"
 msgstr "<Trenutna lokacija popisa videozapisa>"
@@ -2394,10 +2407,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "< Trenutno >"
-
 msgid "Current CEC address"
 msgstr "Trenutna CEC adresa"
 
@@ -2583,10 +2592,6 @@ msgstr "Zadane postavke"
 msgid "Default timer type"
 msgstr "Zadana vrsta tajmera"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "< Zadano + pikon >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Definirajte mjesto datoteke EPG predmemorije."
 
@@ -2659,10 +2664,6 @@ msgstr "Izbrisati"
 msgid "Delete Image"
 msgstr "Izbriši image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Izbrišite sav tekst"
-
 msgid "Delete entry"
 msgstr "Brisanje unosa"
 
@@ -2680,6 +2681,10 @@ msgstr "Izbrišite unos s popisa za reprodukciju"
 
 msgid "Delete saved playlist"
 msgstr "Izbrišite spremljeni popis pjesama"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Izbrišite sav tekst"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Izbrišite znak s lijeve strane pokazivača teksta"
@@ -3161,10 +3166,6 @@ msgstr "Elektronski programski vodič (EPG)"
 
 msgid "Embedded"
 msgstr "Ugrađen"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Hitna pomoć >"
 
 msgid "Empty slot"
 msgstr "Prazan utor"
@@ -5875,10 +5876,6 @@ msgstr "Zaustavljanje reprodukcije"
 msgid "Pause/Continue playback"
 msgstr "Pauza/nastavak reprodukcije"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< U tijeku je ponovno pokretanje >"
-
 msgid "Percentage left"
 msgstr "Postotak lijevo"
 
@@ -6360,7 +6357,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Pritisnite OK na daljinskom upravljaču za nastavak."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Pritisnite OK za aktiviranje odabranog%s skina."
 
 msgid "Press OK to activate the settings."
@@ -6374,7 +6371,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Pritisnite OK za dodatne pojedinosti za %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Pritisnite OK za zadržavanje trenutno odabranog%s skina."
 
 msgid "Press OK to scan"
@@ -7374,6 +7371,10 @@ msgstr "Odaberite film"
 
 msgid "Select a network adapter"
 msgstr "Odaberite mrežni adapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Odaberite radnju"
 
 msgid "Select a tuner"
 msgstr "Odaberite tjuner"
@@ -9743,10 +9744,6 @@ msgstr "Ažuriranje kataloga softvera"
 
 msgid "Upper case"
 msgstr "Velika slova"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Tajmer spavanja"
 
 msgid "Uruguay"
 msgstr "Urugvaj"
