--- a/po/hu.po
+++ b/po/hu.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-13 21:36+0200\n"
 "Last-Translator: mcfly82\n"
 "Language-Team: mcfly82 & wysless\n"
@@ -203,12 +203,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d mag"
 msgstr[1] "%d mag"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -559,6 +553,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - alapértelmezett (kikapcsolva)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "< Jelenlegi >"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "< Alapértelmezett + Picon >"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Alapértelmezett"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Vészhelyzet >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< Felfüggesztett újraindítás >"
 
 msgid "<Current movielist location>"
 msgstr "<Filmlista aktuális tárhelye>"
@@ -2381,10 +2395,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curaçao"
 
-#, fuzzy
-msgid "Current"
-msgstr "< Jelenlegi >"
-
 msgid "Current CEC address"
 msgstr "Aktuális CEC cím"
 
@@ -2568,10 +2578,6 @@ msgstr "Alapértelmezett beállítások"
 msgid "Default timer type"
 msgstr "Alapértelmezett időzítő típusa"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "< Alapértelmezett + Picon >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Az EPG cache fájl helyének megadása."
 
@@ -2644,10 +2650,6 @@ msgstr "Törlés"
 msgid "Delete Image"
 msgstr "Image törlése"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Minden szöveg törlése"
-
 msgid "Delete entry"
 msgstr "Adat törlése"
 
@@ -2665,6 +2667,10 @@ msgstr "Lejátszási lista bejegyzés törlése"
 
 msgid "Delete saved playlist"
 msgstr "Mentett lejátszási lista törlése"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Minden szöveg törlése"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "A kurzortól balra lévő karakter törlése"
@@ -3142,10 +3148,6 @@ msgstr "Elektronikus Műsorújság"
 
 msgid "Embedded"
 msgstr "Beágyazott"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Vészhelyzet >"
 
 msgid "Empty slot"
 msgstr "Üres hely"
@@ -5855,10 +5857,6 @@ msgstr "Lejátszás megállítása"
 msgid "Pause/Continue playback"
 msgstr "Lejátszás megállítása/folytatása"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< Felfüggesztett újraindítás >"
-
 msgid "Percentage left"
 msgstr "Százalék balra"
 
@@ -6340,7 +6338,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Nyomja le az OK gombot a távirányítón a folytatáshoz."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Nyomja le az OK gombot az új %s kinézet aktiválásához."
 
 msgid "Press OK to activate the settings."
@@ -6354,7 +6352,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Nyomja le az OK gombot több részletért %s kapcsán"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Nyomja le az OK gombot a jelenlegi %s kinézet megtartásához."
 
 msgid "Press OK to scan"
@@ -7349,6 +7347,10 @@ msgstr "Felvétel kiválasztása"
 
 msgid "Select a network adapter"
 msgstr "Válasszon hálózati adaptert"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Művelet kiválasztása"
 
 msgid "Select a tuner"
 msgstr "Tuner kiválasztása"
@@ -9724,10 +9726,6 @@ msgstr "Szoftver-katalógus frissítése"
 
 msgid "Upper case"
 msgstr "Nagybetű"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Elalvás időzítő"
 
 msgid "Uruguay"
 msgstr "Uruguay"
