--- a/po/id.po
+++ b/po/id.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Budiarno Pedode\n"
 "Language-Team: \n"
@@ -202,12 +202,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d inti"
 msgstr[1] "%d inti"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -563,6 +557,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - bawaan (dimatikan)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Nilai saat ini: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Pengaturan bawaan"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Bawaan"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Standby / mulai ulang"
 
 msgid "<Current movielist location>"
 msgstr "<Lokasi daftar film saat ini>"
@@ -2424,10 +2437,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Nilai saat ini: "
-
 msgid "Current CEC address"
 msgstr "Alamat CEC saat ini"
 
@@ -2620,10 +2629,6 @@ msgid "Default timer type"
 msgstr "Hapus pewaktu"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Pengaturan bawaan"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Atur aspek rasio layar."
 
@@ -2697,10 +2702,6 @@ msgstr "Hapus"
 msgid "Delete Image"
 msgstr "Hapus pewaktu"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Hapus entri daftar putar"
-
 msgid "Delete entry"
 msgstr "Hapus entri"
 
@@ -2719,6 +2720,10 @@ msgstr "Hapus entri daftar putar"
 
 msgid "Delete saved playlist"
 msgstr "Hapus daftar putar tersimpan"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Hapus entri daftar putar"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3213,9 +3218,6 @@ msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6021,10 +6023,6 @@ msgstr "Jeda pemutaran"
 msgid "Pause/Continue playback"
 msgstr "Lanjut mainkan"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Standby / mulai ulang"
-
 msgid "Percentage left"
 msgstr "Persentase di kiri"
 
@@ -6519,7 +6517,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Tekan OK pada remote kontrol anda untuk melanjutkan."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Tekan OK untuk mengaktifkan tampilan."
 
 msgid "Press OK to activate the settings."
@@ -6533,7 +6531,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Tekan OK untuk mendapatkan rincian lanjut pada %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Tekan OK untuk mengaktifkan tampilan."
 
 msgid "Press OK to scan"
@@ -7554,6 +7552,10 @@ msgstr "Pilih film"
 
 msgid "Select a network adapter"
 msgstr "Pilih adapter jaringan"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Pilih tindakan"
 
 msgid "Select a tuner"
 msgstr "Pilih penala"
@@ -9988,10 +9990,6 @@ msgstr "Memperbarui katalog perangkat lunak"
 
 msgid "Upper case"
 msgstr "Huruf besar"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Pewaktu tidur"
 
 msgid "Uruguay"
 msgstr ""
