--- a/po/is.po
+++ b/po/is.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-16 18:44+0200\n"
 "Last-Translator: Baldur <bsveinsson@gmail.com>\n"
 "Language-Team: Polar Team/LT Team <baddi@oreind.is>\n"
@@ -207,12 +207,6 @@ msgstr[1] "%d rásir fundnar!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -606,6 +600,28 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Núverandi val:"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Upphafs stillingar"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Venjulegt"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Biðstaða / Endurræsing"
 
 msgid "<Current movielist location>"
 msgstr "<Núverandi staður bíómyndalista>"
@@ -2572,10 +2588,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Núverandi val:"
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2792,11 +2804,6 @@ msgstr "Upphafs stillingar"
 msgid "Default timer type"
 msgstr "Gerð Tímastillngar"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Upphafs stillingar"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2873,11 +2880,6 @@ msgid "Delete Image"
 msgstr "eyða skrá"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "eyða atriði úr spilunarlista"
-
-#
 msgid "Delete entry"
 msgstr "Eyða innslætti"
 
@@ -2904,6 +2906,11 @@ msgstr "eyða atriði úr spilunarlista"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "eyða vistuðum spilunarlista"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "eyða atriði úr spilunarlista"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3467,9 +3474,6 @@ msgid "Electronic Program Guide"
 msgstr "Rafrænn dagskrárstjóri (EPG)"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6601,11 +6605,6 @@ msgstr "Held áfram spilun"
 msgid "Pause/Continue playback"
 msgstr "Halda áfram að spila"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Biðstaða / Endurræsing"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -7179,7 +7178,7 @@ msgstr "Ýttu á OK á fjarstýringunni til að halda áfram."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Ýttu á OK til að velja valið skinn."
 
 #
@@ -7197,7 +7196,7 @@ msgstr "Ýttu á OK til að fá nánari upplýsingar um %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Ýttu á OK til að velja valið skinn."
 
 #
@@ -8375,6 +8374,11 @@ msgstr "Veldu mynd"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Veldu Netkort"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Veldu mynd"
 
 #
 #, fuzzy
@@ -11103,9 +11107,6 @@ msgid "Updating software catalog"
 msgstr "Uppfæri efnisyfirlit hugbúnaðar"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
