--- a/po/ku.po
+++ b/po/ku.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2 Kurdish translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2013-04-22 04:29+0330\n"
 "Last-Translator: dimili21\n"
 "Language-Team: \n"
@@ -203,12 +203,6 @@ msgstr[1] "%d services found!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -559,6 +553,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Current value: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Default settings"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Default"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Bigiri / Nu Vegeri"
 
 msgid "<Current movielist location>"
 msgstr "<konuma listekén filma>"
@@ -2408,10 +2421,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Current value: "
-
 msgid "Current CEC address"
 msgstr "Current CEC address"
 
@@ -2602,10 +2611,6 @@ msgid "Default timer type"
 msgstr "Timer type"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Default settings"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Configure the aspect ratio of the screen."
 
@@ -2679,10 +2684,6 @@ msgstr "Paqiş"
 msgid "Delete Image"
 msgstr "Delete file"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Delete playlist entry"
-
 msgid "Delete entry"
 msgstr "Delete entry"
 
@@ -2701,6 +2702,10 @@ msgstr "Delete playlist entry"
 
 msgid "Delete saved playlist"
 msgstr "Delete saved playlist"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Delete playlist entry"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3188,9 +3193,6 @@ msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -5938,10 +5940,6 @@ msgstr "Pause playback"
 msgid "Pause/Continue playback"
 msgstr "Continue playback"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Bigiri / Nu Vegeri"
-
 msgid "Percentage left"
 msgstr "Percentage left"
 
@@ -6434,7 +6432,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Press OK on your remote control to continue."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 msgid "Press OK to activate the settings."
@@ -6448,7 +6446,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Press OK to get further details for %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 msgid "Press OK to scan"
@@ -7465,6 +7463,10 @@ msgstr "Select a movie"
 
 msgid "Select a network adapter"
 msgstr "Select a network adapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Select a skin"
 
 msgid "Select a tuner"
 msgstr "Select a tuner"
@@ -9863,9 +9865,6 @@ msgid "Updating software catalog"
 msgstr "Updating software catalog"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
