--- a/po/lv.po
+++ b/po/lv.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2014-11-12 00:49+0200\n"
 "Last-Translator: Taapat <taapat@gmail.com>\n"
 "Language-Team: Taapat <taapat@gmail.com>\n"
@@ -207,13 +207,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d kodols"
 msgstr[1] "%d kodoli"
 msgstr[2] "%d kodoli"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -576,6 +569,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - pēc noklusējuma (nedarbosies)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Pašreizējā vērtība: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Pēc noklusējuma"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Noklusētais"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Izslēgšana"
 
 msgid "<Current movielist location>"
 msgstr "<Tekošā mediju saraksta atrašanās vieta>"
@@ -2396,10 +2408,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Kirasao"
 
-#, fuzzy
-msgid "Current"
-msgstr "Pašreizējā vērtība: "
-
 msgid "Current CEC address"
 msgstr "Pašreizējā CEC adrese"
 
@@ -2587,10 +2595,6 @@ msgstr "Noklusējuma iestatījumi"
 msgid "Default timer type"
 msgstr "Dzēst taimeri"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Pēc noklusējuma"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Norādiet EPG kešatmiņas faila atrašanās vietu."
 
@@ -2664,10 +2668,6 @@ msgstr "Dzēst"
 msgid "Delete Image"
 msgstr "Izdzēst imidžu"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Dzēst repertuāra ierakstu"
-
 msgid "Delete entry"
 msgstr "Dzēst ierakstu "
 
@@ -2685,6 +2685,10 @@ msgstr "Dzēst repertuāra ierakstu"
 
 msgid "Delete saved playlist"
 msgstr "Dzēst saglabāto repertuāru"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Dzēst repertuāra ierakstu"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3171,9 +3175,6 @@ msgstr "Elektroniskais Programmu Gids"
 
 msgid "Embedded"
 msgstr "Iekšējais"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr "Tukšs slots"
@@ -5914,10 +5915,6 @@ msgstr "Nopauzēt atskaņošanu"
 msgid "Pause/Continue playback"
 msgstr "Nopauzēt/Turpināt atskaņošanu"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Izslēgšana"
-
 msgid "Percentage left"
 msgstr "Procenti kreisā pusē"
 
@@ -6401,7 +6398,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Spiediet OK uz tālvadības pults, lai turpinātu."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Spiediet OK lai aktivizētu izvēlēto noformējumu."
 
 msgid "Press OK to activate the settings."
@@ -6415,7 +6412,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Spiediet OK turpmākai informācijai %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Spiediet OK lai aktivizētu izvēlēto noformējumu."
 
 msgid "Press OK to scan"
@@ -7420,6 +7417,10 @@ msgstr "Izvēlieties filmu"
 
 msgid "Select a network adapter"
 msgstr "Izvēlieties tīkla adapteri"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Izvēlieties darbību"
 
 msgid "Select a tuner"
 msgstr "Izvēlieties uztvērēju"
@@ -9803,10 +9804,6 @@ msgstr "Atjauno programmatūras katalogu"
 
 msgid "Upper case"
 msgstr "Lieli burti"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Miega taimeris"
 
 msgid "Uruguay"
 msgstr "Urugvaja"
