--- a/po/nb.po
+++ b/po/nb.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-04-26 13:56+0200\n"
 "Last-Translator: GeirJ <dummy@dummy.com>\n"
 "Language-Team: GeirJ\n"
@@ -215,12 +215,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d kjerne"
 msgstr[1] "%d kjerner"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -610,6 +604,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - standard (frakoblet)"
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "< Gjeldende >"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "< Standard + Kanallogo >"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Standard"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Nødsituasjon >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< Venter på omstart >"
 
 msgid "<Current movielist location>"
 msgstr "<Gjeldende opptaksmappe>"
@@ -2627,11 +2644,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "< Gjeldende >"
-
 msgid "Current CEC address"
 msgstr "Gjeldende CEC adresse"
 
@@ -2844,11 +2856,6 @@ msgstr "Standard innstillinger"
 msgid "Default timer type"
 msgstr "Standard timer type"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "< Standard + Kanallogo >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Velg sti til EPG hurtigbuffer fil."
 
@@ -2925,11 +2932,6 @@ msgid "Delete Image"
 msgstr "Slett programvare"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Slett oppføring i opptaksliste"
-
-#
 msgid "Delete entry"
 msgstr "Slett oppføring"
 
@@ -2952,6 +2954,11 @@ msgstr "Slett oppføring i opptaksliste"
 #
 msgid "Delete saved playlist"
 msgstr "Slett lagret opptaksliste"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Slett oppføring i opptaksliste"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3494,10 +3501,6 @@ msgstr "Elektronisk Program Guide"
 
 msgid "Embedded"
 msgstr "Innebygd"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Nødsituasjon >"
 
 msgid "Empty slot"
 msgstr "Tom"
@@ -6541,10 +6544,6 @@ msgstr "Pause avspilling"
 msgid "Pause/Continue playback"
 msgstr "Pause / Fortsett avspilling"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< Venter på omstart >"
-
 msgid "Percentage left"
 msgstr "Prosent venstre"
 
@@ -7095,7 +7094,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Trykk OK for å fortsette."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Trykk OK for å ta i bruk det valgte%s skin."
 
 msgid "Press OK to activate the settings."
@@ -7109,7 +7108,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Trykk OK for å få ytterligere detaljer for %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Trykk OK for å beholde den valgte %s skin."
 
 msgid "Press OK to scan"
@@ -8223,6 +8222,11 @@ msgstr "Velg film"
 #
 msgid "Select a network adapter"
 msgstr "Velg et nettverkskort"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Velg handling"
 
 #
 msgid "Select a tuner"
@@ -10859,10 +10863,6 @@ msgstr "Oppdaterer programvarekatalog"
 
 msgid "Upper case"
 msgstr "Store bokstaver"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Dvale timer"
 
 msgid "Uruguay"
 msgstr "Uruguay"
