--- a/po/nl.po
+++ b/po/nl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: Frenske <voorzitter@openpli.org>\n"
 "Language-Team: PLiteam <translators@openpli.org>\n"
@@ -203,12 +203,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d cores"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -560,6 +554,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ":0000 - standaard (uitgeschakeld)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "<Huidige>"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Standaard + Picon>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Standaard"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Tijdelijke skin >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "<Wacht op herstart>"
 
 msgid "<Current movielist location>"
 msgstr "<Huidige opnamelijstlocatie>"
@@ -2558,10 +2572,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "<Huidige>"
-
 msgid "Current CEC address"
 msgstr "Huidig CEC adres"
 
@@ -2747,10 +2757,6 @@ msgstr "Standaard instellingen"
 msgid "Default timer type"
 msgstr "Standaard type timer"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Standaard + Picon>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Geef de plaats van het EPG cache bestand aan."
 
@@ -2823,10 +2829,6 @@ msgstr "Verwijderen"
 msgid "Delete Image"
 msgstr "Verwijderen de image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Verwijder alle tekst"
-
 msgid "Delete entry"
 msgstr "Verwijder de invoer"
 
@@ -2844,6 +2846,10 @@ msgstr "Verwijder een item uit de afspeellijst"
 
 msgid "Delete saved playlist"
 msgstr "Verwijder een opgeslagen afspeellijst"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Verwijder alle tekst"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Verwijder het teken links van de tekst-cursor"
@@ -3335,10 +3341,6 @@ msgstr "Elektronische Programma Gids"
 
 msgid "Embedded"
 msgstr "Ingebouwd"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Tijdelijke skin >"
 
 msgid "Empty slot"
 msgstr "Leeg slot"
@@ -6064,10 +6066,6 @@ msgstr "Zet de weergave op pauze"
 msgid "Pause/Continue playback"
 msgstr "Pauzeer/Hervat afspelen"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "<Wacht op herstart>"
-
 msgid "Percentage left"
 msgstr "Percentage links"
 
@@ -6574,7 +6572,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Druk Ok op uw afstandsbediening om verder te gaan."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Druk Ok om de gekozen%s skin te activeren."
 
 msgid "Press OK to activate the settings."
@@ -6588,7 +6586,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Druk op Ok voor meer detail over: %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Druk op Ok om de huidige gekozen%s skin te behouden."
 
 msgid "Press OK to scan"
@@ -7589,6 +7587,10 @@ msgstr "Kies een opname"
 
 msgid "Select a network adapter"
 msgstr "Kies een netwerkadapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Maak uw keuze"
 
 msgid "Select a tuner"
 msgstr "Kies een tuner"
@@ -9980,10 +9982,6 @@ msgstr "Software catalogus wordt geüpdatet"
 
 msgid "Upper case"
 msgstr "Hoofdletters"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Sleeptimer"
 
 msgid "Uruguay"
 msgstr "Uruguay"
