--- a/po/nn.po
+++ b/po/nn.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2013-10-23 19:15+0100\n"
 "Last-Translator: andy1 <dmmm8000pvr@gmail.com>\n"
 "Language-Team: none\n"
@@ -203,12 +203,6 @@ msgstr[1] "%d kanaler funnet!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -589,6 +583,28 @@ msgstr ""
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Gjeldende verdi:"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Standardinnstilling"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Standard"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Av/på strømvalg"
 
 msgid "<Current movielist location>"
 msgstr "<Gjeldende spilliste>"
@@ -2604,11 +2620,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Gjeldende verdi:"
-
 msgid "Current CEC address"
 msgstr "Gjeldende CEC adresse"
 
@@ -2824,11 +2835,6 @@ msgstr "Standardinnstilling"
 msgid "Default timer type"
 msgstr "Tidtaker type"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Standardinnstilling"
-
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Still inn sideforholdet på skjermen."
@@ -2906,11 +2912,6 @@ msgid "Delete Image"
 msgstr "Slette fil"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Slette oppføring i spilliste"
-
-#
 msgid "Delete entry"
 msgstr "Slette tidtaker"
 
@@ -2934,6 +2935,11 @@ msgstr "Slette oppføring i spilliste"
 #
 msgid "Delete saved playlist"
 msgstr "Slette lagret spilliste"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Slette oppføring i spilliste"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3476,9 +3482,6 @@ msgid "Electronic Program Guide"
 msgstr "Elektronisk Program Guide"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6504,10 +6507,6 @@ msgstr "Pause avspilling"
 msgid "Pause/Continue playback"
 msgstr "Fortsett avspillingen"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Av/på strømvalg"
-
 msgid "Percentage left"
 msgstr "Prosent venstre"
 
@@ -7052,7 +7051,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Trykk OK for å fortsette."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Trykk OK for å ta i bruk det valgte skin."
 
 msgid "Press OK to activate the settings."
@@ -7066,7 +7065,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Trykk OK for å få ytterligere detaljer for %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Trykk OK for å ta i bruk det valgte skin."
 
 msgid "Press OK to scan"
@@ -8169,6 +8168,11 @@ msgstr "Velg en film"
 #
 msgid "Select a network adapter"
 msgstr "Velg et nettverkskort"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Velg et skin"
 
 #
 msgid "Select a tuner"
@@ -10776,10 +10780,6 @@ msgstr "Oppdaterer programvare katalog"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Tidtaker"
 
 msgid "Uruguay"
 msgstr ""
