--- a/po/pl.po
+++ b/po/pl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2019-12-03 20:02+0100\n"
 "Last-Translator: blzr <blzr@o2.pl>\n"
 "Language-Team: \n"
@@ -205,13 +205,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d rdzeń"
 msgstr[1] "%d rdzenie"
 msgstr[2] "%d rdzeni"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -574,6 +567,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - domyślny (wyłączono)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Aktualna wartość:"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Skin domyślny>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Domyślny"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Czuwanie / Restart"
 
 msgid "<Current movielist location>"
 msgstr "<Bieżąca lokalizacja nagrań>"
@@ -2402,10 +2414,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Aktualna wartość:"
-
 msgid "Current CEC address"
 msgstr "Aktualny adres CEC"
 
@@ -2592,10 +2600,6 @@ msgstr "Ustawienia domyślne"
 msgid "Default timer type"
 msgstr "Usuń timer"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Skin domyślny>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Ustaw lokalizację pliku EPG cache."
 
@@ -2669,10 +2673,6 @@ msgstr "Usuń"
 msgid "Delete Image"
 msgstr "Usuń image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Usuń pozycję playlisty"
-
 msgid "Delete entry"
 msgstr "Skasuj wpis"
 
@@ -2690,6 +2690,10 @@ msgstr "Usuń pozycję playlisty"
 
 msgid "Delete saved playlist"
 msgstr "Usuń zachowaną playlistę"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Usuń pozycję playlisty"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3172,9 +3176,6 @@ msgstr "EPG"
 
 msgid "Embedded"
 msgstr "Wtopione"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr "Pusty slot"
@@ -5905,10 +5906,6 @@ msgstr "Wstrzymaj odtwarzanie"
 msgid "Pause/Continue playback"
 msgstr "Pauza/wznowienie odtwarzania"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Czuwanie / Restart"
-
 msgid "Percentage left"
 msgstr "Procenty po lewej"
 
@@ -6390,7 +6387,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Wciśnij OK, aby kontynuować."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Wciśnij OK, aby aktywować wybrany skin."
 
 msgid "Press OK to activate the settings."
@@ -6404,7 +6401,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Wciśnij OK, aby uzyskać więcej info o %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Wciśnij OK, aby aktywować wybrany skin."
 
 msgid "Press OK to scan"
@@ -7408,6 +7405,10 @@ msgstr "Wybierz film"
 
 msgid "Select a network adapter"
 msgstr "Wybierz adapter sieciowy"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Wybierz działanie"
 
 msgid "Select a tuner"
 msgstr "Wybierz tuner"
@@ -9791,10 +9792,6 @@ msgstr "Aktualizowanie katalogu oprogramowania"
 
 msgid "Upper case"
 msgstr "Wielkie litery"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Wyłącznik czasowy"
 
 msgid "Uruguay"
 msgstr "Urugwaj"
