--- a/po/pt.po
+++ b/po/pt.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2014-12-15 19:38-0000\n"
 "Last-Translator: Phenom <phenomxy@gmail.com>\n"
 "Language-Team: Muaitai <muaitai@gmail.com>\n"
@@ -207,12 +207,6 @@ msgstr[1] "%d canais encontrados"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -586,6 +580,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Valor actual: "
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Configurações padrão"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Padrão"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Standby / Reiniciar"
 
 #
 msgid "<Current movielist location>"
@@ -2722,11 +2739,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Valor actual: "
-
 msgid "Current CEC address"
 msgstr "Endereço actual de CEC"
 
@@ -2956,11 +2968,6 @@ msgstr "Configurações padrão"
 msgid "Default timer type"
 msgstr "Eliminar agendamento"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Configurações padrão"
-
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Configurar a proporção (aspect ratio) do ecrã"
@@ -3037,11 +3044,6 @@ msgid "Delete Image"
 msgstr "Eliminar agendamento"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Eliminar entrada da Lista de Reprodução"
-
-#
 msgid "Delete entry"
 msgstr "Eliminar entrada"
 
@@ -3067,6 +3069,11 @@ msgstr "Eliminar entrada da Lista de Reprodução"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "Eliminar Lista de Reprodução gravada"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Eliminar entrada da Lista de Reprodução"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3637,9 +3644,6 @@ msgid "Electronic Program Guide"
 msgstr "Guia de Programação"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6804,11 +6808,6 @@ msgstr "Pausar reprodução"
 msgid "Pause/Continue playback"
 msgstr "Pausar/Continuar reprodução"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Standby / Reiniciar"
-
 msgid "Percentage left"
 msgstr "Percentagem restante"
 
@@ -7403,7 +7402,7 @@ msgstr "Prima OK para continuar."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Prima OK para activar o tema seleccionado."
 
 #
@@ -7421,7 +7420,7 @@ msgstr "Prima OK para obter mais detalhes de %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Prima OK para activar o tema seleccionado."
 
 #
@@ -8617,6 +8616,10 @@ msgstr "Seleccione um filme"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Seleccione adaptador de rede"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Seleccionar acção"
 
 #
 #, fuzzy
@@ -11398,10 +11401,6 @@ msgstr "A actualizar o catalogo de software"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Temporizador"
 
 msgid "Uruguay"
 msgstr ""
