--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2013-10-20 19:13-0300\n"
 "Last-Translator: Diogo <pingflood@gmail.com>\n"
 "Language-Team: Traduzido por Frank Viana <franksrviana@gmail.com>\n"
@@ -200,12 +200,6 @@ msgstr[1] "%d canais encontrados"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -554,6 +548,25 @@ msgstr ""
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Valor atual: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Configuração padrão"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Padrão"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Desligar"
 
 msgid "<Current movielist location>"
 msgstr "<Diretório atual da lista de gravações>"
@@ -2398,10 +2411,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Valor atual: "
-
 msgid "Current CEC address"
 msgstr "Endereço atual de CEC"
 
@@ -2592,10 +2601,6 @@ msgid "Default timer type"
 msgstr "Ação do temporizador"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Configuração padrão"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Configurar proporção da tela."
 
@@ -2669,10 +2674,6 @@ msgstr "Remover"
 msgid "Delete Image"
 msgstr "Remover arquivo"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Remover item da lista de reprodução"
-
 msgid "Delete entry"
 msgstr "Remover item"
 
@@ -2691,6 +2692,10 @@ msgstr "Remover item da lista de reprodução"
 
 msgid "Delete saved playlist"
 msgstr "Remover lista de reprodução salva"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Remover item da lista de reprodução"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3180,9 +3185,6 @@ msgid "Electronic Program Guide"
 msgstr ""
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -5927,10 +5929,6 @@ msgstr "Pausar"
 msgid "Pause/Continue playback"
 msgstr "Reprodução contínua"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Desligar"
-
 msgid "Percentage left"
 msgstr "Porcentagem à esquerda"
 
@@ -6425,7 +6423,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Pressione OK para continuar."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Pressione OK para ativar o tema selecionado."
 
 msgid "Press OK to activate the settings."
@@ -6439,7 +6437,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Pressione OK para mais detalhes de %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Pressione OK para ativar o tema selecionado."
 
 msgid "Press OK to scan"
@@ -7455,6 +7453,10 @@ msgstr "Selecione um vídeo"
 
 msgid "Select a network adapter"
 msgstr "Selecione um adaptador de rede"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Selecione um tema"
 
 msgid "Select a tuner"
 msgstr "Selecione um tuner"
@@ -9853,10 +9855,6 @@ msgstr "Atualizando o catálogo de software..."
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Temporizador"
 
 msgid "Uruguay"
 msgstr ""
