--- a/po/ru.po
+++ b/po/ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-04-20 21:51+0300\n"
 "Last-Translator: Dimitrij <Dima-73@inbox.lv>\n"
 "Language-Team: openPLi Dimitrij\n"
@@ -205,13 +205,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d ядро"
 msgstr[1] "%d ядра"
 msgstr[2] "%d ядра"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -572,6 +565,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - по умолчанию (отключено)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "< Текущий >"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Дефолт + пикон >"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Дефолт"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Чрезвычайная ситуация >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< Ожидание рестарта >"
 
 msgid "<Current movielist location>"
 msgstr "<Текущее место списка видео>"
@@ -2393,10 +2406,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "< Текущий >"
-
 msgid "Current CEC address"
 msgstr "Текущий адрес CEC"
 
@@ -2582,10 +2591,6 @@ msgstr "Дефолтные настройки"
 msgid "Default timer type"
 msgstr "Тип таймера по дефолту"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Дефолт + пикон >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Выбор расположения кеша EPG файла."
 
@@ -2658,10 +2663,6 @@ msgstr "Удалить"
 msgid "Delete Image"
 msgstr "Удалить имидж"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "удалить запись из плейлиста"
-
 msgid "Delete entry"
 msgstr "удалить выбранное"
 
@@ -2679,6 +2680,10 @@ msgstr "удалить запись из плейлиста"
 
 msgid "Delete saved playlist"
 msgstr "удалить сохраненный плейлист"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "удалить запись из плейлиста"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Удалить символ слева от текстового курсора"
@@ -3157,10 +3162,6 @@ msgstr "Электронный Программный Гид"
 
 msgid "Embedded"
 msgstr "Встроенные"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Чрезвычайная ситуация >"
 
 msgid "Empty slot"
 msgstr "Пустой слот"
@@ -5873,10 +5874,6 @@ msgstr "Пауза воспроизведения"
 msgid "Pause/Continue playback"
 msgstr "Пауза/продолжение воспроизведение"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< Ожидание рестарта >"
-
 msgid "Percentage left"
 msgstr "Проценты слева"
 
@@ -6358,7 +6355,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Нажмите ОК на Вашем пульте Д/У для продолжения."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Нажмите OK, для активации выбранного%s скина."
 
 msgid "Press OK to activate the settings."
@@ -6372,7 +6369,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Нажмите ОК, чтобы получить подробную информацию для %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Нажмите OK, чтобы сохранить выбранный%s скин."
 
 msgid "Press OK to scan"
@@ -7374,6 +7371,10 @@ msgstr "Выбрать видео"
 
 msgid "Select a network adapter"
 msgstr "Выбор сетевого адаптера"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Выберите действие"
 
 msgid "Select a tuner"
 msgstr "Выбор тюнера"
@@ -9738,10 +9739,6 @@ msgstr "Обновление каталога ПО"
 
 msgid "Upper case"
 msgstr "Верхний регистр"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Таймер сна"
 
 msgid "Uruguay"
 msgstr "Uruguay"
