--- a/po/sk.po
+++ b/po/sk.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-12 14:02+0200\n"
 "Last-Translator: Andrej Tobola <andrej.tobola@gmail.com>\n"
 "Language-Team: \n"
@@ -206,13 +206,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d jadro"
 msgstr[1] "%d jadrá"
 msgstr[2] "%d jadier"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -573,6 +566,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - predvolené (vypnuté)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "< Aktuálne >"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "< Predvolené + Picon >"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Predvolené"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "< Núdzový >"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "< Čakajúci reštart >"
 
 msgid "<Current movielist location>"
 msgstr "<Aktuálne umiestnenie zoznamu filmov>"
@@ -2394,10 +2407,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "< Aktuálne >"
-
 msgid "Current CEC address"
 msgstr "Súčasná CEC adresa"
 
@@ -2583,10 +2592,6 @@ msgstr "Predvolené nastavenia"
 msgid "Default timer type"
 msgstr "Predvolený typ časovača"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "< Predvolené + Picon >"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Definícia umiestnenia dočasného súboru EPG."
 
@@ -2659,10 +2664,6 @@ msgstr "Vymazať"
 msgid "Delete Image"
 msgstr "Vymazať image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Vymazať všetok text"
-
 msgid "Delete entry"
 msgstr "Vymazať zadanie"
 
@@ -2680,6 +2681,10 @@ msgstr "Zmazať položku v zozname prehrávok"
 
 msgid "Delete saved playlist"
 msgstr "Zmazať uložený zoznam prehrávok"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Vymazať všetok text"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Vymazať znak vľavo od kurzora"
@@ -3158,10 +3163,6 @@ msgstr "Elektronický programový sprievodca"
 
 msgid "Embedded"
 msgstr "Vložené"
-
-#, fuzzy
-msgid "Emergency"
-msgstr "< Núdzový >"
 
 msgid "Empty slot"
 msgstr "Prázdny slot"
@@ -5872,10 +5873,6 @@ msgstr "Pauza/prehrávanie"
 msgid "Pause/Continue playback"
 msgstr "Pozastaviť/Pokračovať prehrávanie"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "< Čakajúci reštart >"
-
 msgid "Percentage left"
 msgstr "Percentá vľavo"
 
@@ -6357,7 +6354,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Ak chcete pokračovať, stlačte tlačidlo OK na diaľkovom ovládači."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Stlačením OK aktivujete zvolený vzhľad %s."
 
 msgid "Press OK to activate the settings."
@@ -6371,7 +6368,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Pre ďalšie informácie o %s stlačte tlačidlo OK"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Stlačením OK ponecháte aktuálne zvolený vzhľad %s."
 
 msgid "Press OK to scan"
@@ -7369,6 +7366,10 @@ msgstr "Zvoľte film"
 
 msgid "Select a network adapter"
 msgstr "Vyberte sieťový adaptér"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Vyberte akciu"
 
 msgid "Select a tuner"
 msgstr "Zvoľte tuner"
@@ -9741,10 +9742,6 @@ msgstr "Aktualizácia katalógu softvéru"
 
 msgid "Upper case"
 msgstr "Veľké písmená"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Časovač vypnutia"
 
 msgid "Uruguay"
 msgstr "Uruguay"
