--- a/po/sl.po
+++ b/po/sl.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Project Slovenia\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-16 18:48+0200\n"
 "Last-Translator: Taykun345 <support@satnigmo.com>\n"
 "Language-Team: Satnigmo <support@satnigmo.com>\n"
@@ -213,14 +213,6 @@ msgstr[0] "%d jedro"
 msgstr[1] "%d jedri"
 msgstr[2] "%d jedra"
 msgstr[3] "%d jeder"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-msgstr[3] ""
 
 #, python-format
 msgid "%d file"
@@ -636,6 +628,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Trenutna vrednost:"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Privzete nastavitve"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Privzeto"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Možnosti izklopa sprejemnika"
 
 #
 msgid "<Current movielist location>"
@@ -2739,11 +2754,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Trenutna vrednost:"
-
 msgid "Current CEC address"
 msgstr "Trenutni CEC naslov"
 
@@ -2966,11 +2976,6 @@ msgstr "Privzete nastavitve"
 msgid "Default timer type"
 msgstr "Izbris časovnika"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Privzete nastavitve"
-
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Nastavitev razmerja slike za zaslon."
@@ -3049,11 +3054,6 @@ msgid "Delete Image"
 msgstr "Izbris časovnika"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Izbris vnosov v seznamu predvajanja"
-
-#
 msgid "Delete entry"
 msgstr "Izbris vnosa"
 
@@ -3077,6 +3077,11 @@ msgstr "Izbris vnosov v seznamu predvajanja"
 #
 msgid "Delete saved playlist"
 msgstr "Izbris shranjenega seznama predvajanja"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Izbris vnosov v seznamu predvajanja"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3662,9 +3667,6 @@ msgid "Electronic Program Guide"
 msgstr "Elektronski spored programov (EPG)"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6805,11 +6807,6 @@ msgstr "Pavzirajte predvajanje"
 msgid "Pause/Continue playback"
 msgstr "Pavza/Nadaljevanje predvajanja"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Možnosti izklopa sprejemnika"
-
 msgid "Percentage left"
 msgstr "Odstotek na levi strani"
 
@@ -7397,7 +7394,7 @@ msgstr "Za nadaljevanje pritisnite OK."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Za aktiviranje izbrane predloge pritisnite OK."
 
 #
@@ -7415,7 +7412,7 @@ msgstr "Za podrobnejše informacije o %s pritisnite OK."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Za aktiviranje izbrane predloge pritisnite OK."
 
 #
@@ -8608,6 +8605,11 @@ msgstr "Izberite posnetek"
 #
 msgid "Select a network adapter"
 msgstr "Izberite omrežni vmesnik"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Izberi dogodek"
 
 #
 msgid "Select a tuner"
@@ -11357,11 +11359,6 @@ msgstr "Poteka posodabljanje kataloga programov ..."
 
 msgid "Upper case"
 msgstr ""
-
-#
-#, fuzzy
-msgid "Uptime"
-msgstr "Časovnik spanja"
 
 msgid "Uruguay"
 msgstr ""
