--- a/po/sr.po
+++ b/po/sr.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2011-04-14 00:02+0200\n"
 "Last-Translator: majevica <jovanovic@gmx.ch>\n"
 "Language-Team: veselin & majevica CRNABERZA <jovanovic@gmx.ch>\n"
@@ -212,13 +212,6 @@ msgstr[2] "%d kanala pronađeno!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 msgstr[2] ""
@@ -620,6 +613,28 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Trenutna vrednost:"
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Standardne postavke"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Standardno"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Spreman / restart"
 
 #
 msgid "<Current movielist location>"
@@ -2752,11 +2767,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Trenutna vrednost:"
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2989,11 +2999,6 @@ msgstr "Standardne postavke"
 msgid "Default timer type"
 msgstr "Tip tajmera"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Standardne postavke"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -3070,11 +3075,6 @@ msgid "Delete Image"
 msgstr "Obriši datoteku"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "obriši unos plejliste"
-
-#
 msgid "Delete entry"
 msgstr "Obriši unos"
 
@@ -3101,6 +3101,11 @@ msgstr "obriši unos plejliste"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "obriši sačuvanu plejlistu"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "obriši unos plejliste"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3679,9 +3684,6 @@ msgid "Electronic Program Guide"
 msgstr "Elektronski Programski Vodič"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6863,11 +6865,6 @@ msgstr "Nastavite reprodukciju"
 msgid "Pause/Continue playback"
 msgstr "Nastaviti reprodukciju"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Spreman / restart"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -7456,7 +7453,7 @@ msgstr "Pritisnite OK na daljinskom upravljaču da nastavite."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Pritisnite OK za aktiviranje izabrane maske."
 
 #
@@ -7474,7 +7471,7 @@ msgstr "Pritisnite OK da dobijete dodatne detalje za %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Pritisnite OK za aktiviranje izabrane maske."
 
 #
@@ -8666,6 +8663,11 @@ msgstr "Odaberi film"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Odaberi mrežni adapter"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Odaberi film"
 
 #
 #, fuzzy
@@ -11440,9 +11442,6 @@ msgid "Updating software catalog"
 msgstr "Ažuriranje kataloga softvera"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
