--- a/po/th.po
+++ b/po/th.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1-En-Th\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2010-04-08 18:13+0700\n"
 "Last-Translator: Tony - Thaidreambox\n"
 "Language-Team: Tony @ Thai Dreambox <tonyboyth@gmail.com>\n"
@@ -202,12 +202,6 @@ msgstr[1] "บริการนี้ %d ไม่มี!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -558,6 +552,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "ค่าปัจจุบัน:"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "ตั้งค่าเริ่มต้น"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "ค่าเริ่มต้น"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "ปิดเครื่อง"
 
 msgid "<Current movielist location>"
 msgstr ""
@@ -2447,10 +2460,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "ค่าปัจจุบัน:"
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2651,10 +2660,6 @@ msgstr "ตั้งค่าเริ่มต้น"
 msgid "Default timer type"
 msgstr "ประเภทการตั้งเวลา"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "ตั้งค่าเริ่มต้น"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2728,10 +2733,6 @@ msgstr "ลบ"
 msgid "Delete Image"
 msgstr "ลบไฟล์"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "ลบรายการนี้"
-
 msgid "Delete entry"
 msgstr "ลบรายการ"
 
@@ -2753,6 +2754,10 @@ msgstr "ลบรายการนี้"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "ลบรายการสารบัญ"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "ลบรายการนี้"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3249,9 +3254,6 @@ msgid "Electronic Program Guide"
 msgstr "ผังรายการ (EPG)"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6080,10 +6082,6 @@ msgstr "กำลังกลับมาเล่นที่เดิม"
 msgid "Pause/Continue playback"
 msgstr "เล่นต่อเนื่อง"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "ปิดเครื่อง"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6588,7 +6586,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "กดปุ่ม OK ที่รีโมทเพื่อทำงานต่อ"
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "กดปุ่ม OK เพื่อเริ่มใช้สกินที่เลือกไว้"
 
 msgid "Press OK to activate the settings."
@@ -6602,7 +6600,7 @@ msgid "Press OK to get further details for %s"
 msgstr "กดปุ่ม OK เพื่อดูข้อมูลอื่นของ %s เพิ่มเติม"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "กดปุ่ม OK เพื่อเริ่มใช้สกินที่เลือกไว้"
 
 msgid "Press OK to scan"
@@ -7640,6 +7638,10 @@ msgstr "เลือกภาพยนต์"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "เลือกการ์ดเครือข่าย"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "เลือกภาพยนต์"
 
 #, fuzzy
 msgid "Select a tuner"
@@ -10098,9 +10100,6 @@ msgid "Updating software catalog"
 msgstr ""
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
