--- a/po/tr.po
+++ b/po/tr.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OPENPLi\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2015-12-18 21:05+0200\n"
 "Last-Translator: Yetkin AYDIN <yetkina@gmail.com>\n"
 "Language-Team: http://www.hurforum.com <yetkina@gmail.com>\n"
@@ -206,11 +206,6 @@ msgstr[0] "%d kanal bulundu."
 msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d Çekirdek"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
 
 #, python-format
 msgid "%d file"
@@ -550,6 +545,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Mevcut değer: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Varsayılan ayarlar"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Varsayılan"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Kapatma"
 
 msgid "<Current movielist location>"
 msgstr "<Mevcut film listesi konumu>"
@@ -2404,10 +2418,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Mevcut değer: "
-
 msgid "Current CEC address"
 msgstr "Güncel CEC adresi"
 
@@ -2601,10 +2611,6 @@ msgid "Default timer type"
 msgstr "Zamanlayıcıyı sil"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Varsayılan ayarlar"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Ekranın en boy oranını yapılandırın."
 
@@ -2678,10 +2684,6 @@ msgstr "Sil"
 msgid "Delete Image"
 msgstr "Zamanlayıcıyı sil"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Çalma listesi girdisini silin"
-
 msgid "Delete entry"
 msgstr "Seçimi sil"
 
@@ -2700,6 +2702,10 @@ msgstr "Çalma listesi girdisini silin"
 
 msgid "Delete saved playlist"
 msgstr "Kayıtlı çalma listesini silin"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Çalma listesi girdisini silin"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3192,9 +3198,6 @@ msgid "Electronic Program Guide"
 msgstr "Elektronik Televizyon Rehberi"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -5960,10 +5963,6 @@ msgstr "Yürütmeyi duraklat"
 msgid "Pause/Continue playback"
 msgstr "Dur/Devam "
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Kapatma"
-
 msgid "Percentage left"
 msgstr "Sol oran"
 
@@ -6458,7 +6457,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Devam etmek için kumandanızın OK tuşuna basın."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Arayüzü etkinleştirmek için OK'a basın."
 
 msgid "Press OK to activate the settings."
@@ -6472,7 +6471,7 @@ msgid "Press OK to get further details for %s"
 msgstr "%s detayları için OK tuşuna basın"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Arayüzü etkinleştirmek için OK'a basın."
 
 msgid "Press OK to scan"
@@ -7490,6 +7489,10 @@ msgstr "Film seç"
 
 msgid "Select a network adapter"
 msgstr "Bir ağ bağdaştırıcısı seçin"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Eylem seçimi"
 
 msgid "Select a tuner"
 msgstr "Bir Tuner seçin"
@@ -9916,10 +9919,6 @@ msgstr "Yazılım kataloğu güncelleniyor"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Uyku Zamanlayıcı"
 
 msgid "Uruguay"
 msgstr ""
