--- a/po/uk.po
+++ b/po/uk.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2016-11-17 12:51+0200\n"
 "Last-Translator: vovan43<vovan43@ex.ua>, sety <tim1065@mail.ru>, Irkoff <irkoff@gmail.com>\n"
 "Language-Team: gisclub.tv <http://gisclub.tv/>\n"
@@ -206,13 +206,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d cores"
 msgstr[2] "%d cores"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
 
 #, python-format
 msgid "%d file"
@@ -571,6 +564,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - за замовчуванням (відключено)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Поточне значення: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Налаштування за замовчуванням"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "За замовчуванням"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Меню вимкнення"
 
 msgid "<Current movielist location>"
 msgstr "<Поточне місце списку відео>"
@@ -2432,10 +2444,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Поточне значення: "
-
 msgid "Current CEC address"
 msgstr "Поточна адреса CEC"
 
@@ -2629,10 +2637,6 @@ msgid "Default timer type"
 msgstr "Видалити таймер"
 
 #, fuzzy
-msgid "Default+Picon"
-msgstr "Налаштування за замовчуванням"
-
-#, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Налаштування співвідношення сторін екрану."
 
@@ -2706,10 +2710,6 @@ msgstr "Видалити"
 msgid "Delete Image"
 msgstr "Видалити таймер"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Видалити запис з плейлиста"
-
 msgid "Delete entry"
 msgstr "Видалити вибране"
 
@@ -2728,6 +2728,10 @@ msgstr "Видалити запис з плейлиста"
 
 msgid "Delete saved playlist"
 msgstr "Видалити збережений плейлист"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Видалити запис з плейлиста"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3224,9 +3228,6 @@ msgstr "Електронний Програмний Гід(ЕПГ)"
 #, fuzzy
 msgid "Embedded"
 msgstr "вбудований"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr ""
@@ -6008,10 +6009,6 @@ msgstr "Пауза відтворення"
 msgid "Pause/Continue playback"
 msgstr "Пауза / Продовжити відтворення"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Меню вимкнення"
-
 msgid "Percentage left"
 msgstr "Відсотки зліва"
 
@@ -6506,7 +6503,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Натисніть OK на пульті, щоб продовжити."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Натисніть OK для активації вибраного скіна."
 
 msgid "Press OK to activate the settings."
@@ -6520,7 +6517,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Натисніть ОК, щоб отримати детальну інформацію для %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Натисніть OK для активації вибраного скіна."
 
 msgid "Press OK to scan"
@@ -7548,6 +7545,10 @@ msgstr "Вибрати відео"
 
 msgid "Select a network adapter"
 msgstr "Вибір мережевого адаптера"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Виберіть дію"
 
 msgid "Select a tuner"
 msgstr "Вибрати тюнер"
@@ -10003,10 +10004,6 @@ msgstr "Оновлення каталогу софта"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Таймер сну"
 
 msgid "Uruguay"
 msgstr ""
