--- a/po/vi.po
+++ b/po/vi.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma 2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2019-11-19 08:58+0700\n"
 "Last-Translator: krong\n"
 "Language-Team: none\n"
@@ -203,12 +203,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d lõi"
 msgstr[1] "%d lõi"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -562,6 +556,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - mặc định (bị tắt)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Giá trị hiện tại: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Da mặc định>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Mặc định"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Chờ / khởi động lại"
 
 msgid "<Current movielist location>"
 msgstr "<Vị trí di chuyển hiện tại>"
@@ -2386,10 +2399,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "Giá trị hiện tại: "
-
 msgid "Current CEC address"
 msgstr "Địa chỉ CEC hiện tại"
 
@@ -2576,10 +2585,6 @@ msgstr "Thiết lập mặc định"
 msgid "Default timer type"
 msgstr "Xóa bộ đếm thời gian"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Da mặc định>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Xác định vị trí của tệp EPG Cache."
 
@@ -2653,10 +2658,6 @@ msgstr "Xóa bỏ"
 msgid "Delete Image"
 msgstr "Xóa hình ảnh"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Xóa mục nhập danh sách phát"
-
 msgid "Delete entry"
 msgstr "Xóa mục nhập"
 
@@ -2674,6 +2675,10 @@ msgstr "Xóa mục nhập danh sách phát"
 
 msgid "Delete saved playlist"
 msgstr "Xóa danh sách phát đã lưu"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Xóa mục nhập danh sách phát"
 
 #, fuzzy
 msgid "Delete the character to the left of text cursor"
@@ -3155,9 +3160,6 @@ msgstr "Hướng dẫn chương trình điện tử"
 
 msgid "Embedded"
 msgstr "Nhúng"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr "Chỗ trống"
@@ -5886,10 +5888,6 @@ msgstr "Tạm dừng phát lại"
 msgid "Pause/Continue playback"
 msgstr "Tạm dừng / Tiếp tục phát lại"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Chờ / khởi động lại"
-
 msgid "Percentage left"
 msgstr "Tỷ lệ còn lại"
 
@@ -6371,7 +6369,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Nhấn OK trên điều khiển từ xa của bạn để tiếp tục."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Nhấn OK để kích hoạt giao diện đã chọn."
 
 msgid "Press OK to activate the settings."
@@ -6385,7 +6383,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Nhấn OK để biết thêm chi tiết cho%s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Nhấn OK để kích hoạt giao diện đã chọn."
 
 msgid "Press OK to scan"
@@ -7386,6 +7384,10 @@ msgstr "Chọn một bộ phim"
 
 msgid "Select a network adapter"
 msgstr "Chọn bộ điều hợp mạng"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Chọn hành động"
 
 msgid "Select a tuner"
 msgstr "Chọn bộ chỉnh"
@@ -9765,10 +9767,6 @@ msgstr "Cập nhật danh mục phần mềm"
 
 msgid "Upper case"
 msgstr "Chữ hoa"
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Hẹn giờ ngủ"
 
 msgid "Uruguay"
 msgstr "Uruguay"
