--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLI Enigma2 Official Greek Translation\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 344784320@qq.com\n"
 "Language-Team: Openpli Team\n"
@@ -202,11 +202,6 @@ msgstr[0] "发现 %d 个频道"
 msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d 个核心"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
 
 #, python-format
 msgid "%d file"
@@ -549,6 +544,25 @@ msgstr ""
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - 默认 (不可用)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "<当前>"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<默认 + Picon>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "缺省值"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "待机 / 重启"
 
 msgid "<Current movielist location>"
 msgstr "<当前影片列表位置>"
@@ -2372,10 +2386,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "<当前>"
-
 msgid "Current CEC address"
 msgstr "当前CEC地址"
 
@@ -2561,10 +2571,6 @@ msgstr "默认设置"
 msgid "Default timer type"
 msgstr "默认新建计时器类型"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<默认 + Picon>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "定义EPG缓存文件的位置。"
 
@@ -2637,10 +2643,6 @@ msgstr "删除"
 msgid "Delete Image"
 msgstr "删除固件"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "删除所有文本"
-
 msgid "Delete entry"
 msgstr "删除项目"
 
@@ -2658,6 +2660,10 @@ msgstr "删除播放列表项目"
 
 msgid "Delete saved playlist"
 msgstr "删除已保存的播放列表"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "删除所有文本"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "删除文本缓冲区光标左侧的字符"
@@ -3130,9 +3136,6 @@ msgstr "电子节目指南"
 
 msgid "Embedded"
 msgstr "嵌入"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr ""
@@ -5837,10 +5840,6 @@ msgstr "暂停回放"
 msgid "Pause/Continue playback"
 msgstr "暂停/继续 回放"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "待机 / 重启"
-
 msgid "Percentage left"
 msgstr "左百分比"
 
@@ -6322,7 +6321,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "按OK键确认。"
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "按OK键激活所选皮肤: %s。"
 
 msgid "Press OK to activate the settings."
@@ -6336,7 +6335,7 @@ msgid "Press OK to get further details for %s"
 msgstr "按OK键获取 %s 详细说明"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "按OK键保持目前所选皮肤: %s。"
 
 msgid "Press OK to scan"
@@ -7332,6 +7331,10 @@ msgstr "选择一部电影"
 
 msgid "Select a network adapter"
 msgstr "选择网卡"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "选择动作"
 
 msgid "Select a tuner"
 msgstr "选择调谐器"
@@ -9701,10 +9704,6 @@ msgstr "更新软件目录"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "睡眠定时器"
 
 msgid "Uruguay"
 msgstr ""
