--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: \n"
 "Last-Translator: 王彪 <satfan@163.com>\n"
 "Language-Team: 中國\n"
@@ -195,12 +195,6 @@ msgstr[1] ""
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -550,6 +544,24 @@ msgid "9"
 msgstr "9"
 
 msgid ": 0000 - default (disabled)"
+msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "當前值: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "預設設定"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "預設"
+
+msgid "< Emergency >"
+msgstr ""
+
+msgid "< Pending restart >"
 msgstr ""
 
 msgid "<Current movielist location>"
@@ -2374,10 +2386,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "當前值: "
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2566,10 +2574,6 @@ msgstr "預設設定"
 msgid "Default timer type"
 msgstr "定時類型"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "預設設定"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2643,10 +2647,6 @@ msgstr "刪除"
 msgid "Delete Image"
 msgstr "選擇Image"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "刪除失敗."
-
 msgid "Delete entry"
 msgstr "刪除項目"
 
@@ -2665,6 +2665,10 @@ msgstr ""
 
 msgid "Delete saved playlist"
 msgstr ""
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "刪除失敗."
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3147,9 +3151,6 @@ msgid "Electronic Program Guide"
 msgstr "電子節目指南"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -5889,9 +5890,6 @@ msgstr ""
 msgid "Pause/Continue playback"
 msgstr "繼續播放"
 
-msgid "Pending restart"
-msgstr ""
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6382,7 +6380,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "按OK鍵確認."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "按OK啟動所選皮膚."
 
 msgid "Press OK to activate the settings."
@@ -6396,7 +6394,7 @@ msgid "Press OK to get further details for %s"
 msgstr "按OK鍵獲取 %s 詳細說明"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "按OK啟動所選皮膚."
 
 msgid "Press OK to scan"
@@ -7411,6 +7409,10 @@ msgstr "選擇一部電影"
 
 msgid "Select a network adapter"
 msgstr ""
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "選擇一部電影"
 
 msgid "Select a tuner"
 msgstr ""
@@ -9775,9 +9777,6 @@ msgid "Updating software catalog"
 msgstr "更新軟體目錄"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
