--- a/po/he.po
+++ b/po/he.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2012-03-08 10:40+0330\n"
 "Last-Translator: \n"
 "Language-Team: Arabic <moustafagamal@hotmail.com>\n"
@@ -210,12 +210,6 @@ msgstr[1] "!שירותים נמצאו %d"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -579,6 +573,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Current value: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "הגדרות ברירת מחדל"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "ברירת מחדל"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr " איתחול / המתנה"
 
 #
 msgid "<Current movielist location>"
@@ -2557,10 +2570,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#, fuzzy
-msgid "Current"
-msgstr "Current value: "
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2760,10 +2769,6 @@ msgstr "הגדרות ברירת מחדל"
 msgid "Default timer type"
 msgstr "סוג הטיימר"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "הגדרות ברירת מחדל"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2838,10 +2843,6 @@ msgstr "מחק"
 msgid "Delete Image"
 msgstr "מחק קובץ"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "delete playlist entry"
-
 msgid "Delete entry"
 msgstr "מחק רשומה"
 
@@ -2865,6 +2866,10 @@ msgstr "delete playlist entry"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "delete saved playlist"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "delete playlist entry"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3387,9 +3392,6 @@ msgid "Electronic Program Guide"
 msgstr "Electronic Program Guide"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6379,10 +6381,6 @@ msgstr "Resuming playback"
 msgid "Pause/Continue playback"
 msgstr "המשך לנגן"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr " איתחול / המתנה"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6916,7 +6914,7 @@ msgid "Press OK on your remote control to continue."
 msgstr " על השלט על מנת להמשיך OK לחץ  "
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 #
@@ -6931,7 +6929,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Press OK to get further details for %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Press OK to activate the selected skin."
 
 #
@@ -8019,6 +8017,11 @@ msgstr "Select a movie"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Select Network Adapter"
+
+#
+#, fuzzy
+msgid "Select a skin"
+msgstr "Select a movie"
 
 #
 #, fuzzy
@@ -10638,9 +10641,6 @@ msgid "Updating software catalog"
 msgstr "מעדכן קטלוג תוכנה"
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
