--- a/po/it.po
+++ b/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: OpenPLi-enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-05-16 18:46+0200\n"
 "Last-Translator: Gringo <openpli@tiscali.it>\n"
 "Language-Team: www.linsat.net <spaeleus@croci.org>\n"
@@ -210,12 +210,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d core"
 msgstr[1] "%d core"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -569,6 +563,25 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - predefinito (disabilitato)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Valore attuale: "
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "<Skin Default>"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Predefinito"
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Gestione stato"
 
 msgid "<Current movielist location>"
 msgstr "<Percorso attuale dei video>"
@@ -2382,10 +2395,6 @@ msgstr "Cuba"
 msgid "Curacao"
 msgstr "Curacao"
 
-#, fuzzy
-msgid "Current"
-msgstr "Valore attuale: "
-
 msgid "Current CEC address"
 msgstr "Indirizzo CEC attuale"
 
@@ -2572,10 +2581,6 @@ msgstr "Impostazioni predefinite"
 msgid "Default timer type"
 msgstr "Eliminare il timer"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "<Skin Default>"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Definire il percorso del file Cache EPG."
 
@@ -2649,10 +2654,6 @@ msgstr "Eliminare"
 msgid "Delete Image"
 msgstr "Eliminare l'immagine"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Eliminare la voce della playlist"
-
 msgid "Delete entry"
 msgstr "Eliminare la voce"
 
@@ -2670,6 +2671,10 @@ msgstr "Eliminare la voce della playlist"
 
 msgid "Delete saved playlist"
 msgstr "Eliminare la playlist salvata"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Eliminare la voce della playlist"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3149,9 +3154,6 @@ msgstr "Guida Programmi Elettronica"
 
 msgid "Embedded"
 msgstr "Incorporato"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr "Slot vuoto"
@@ -5881,10 +5883,6 @@ msgstr "Pausa riproduzione"
 msgid "Pause/Continue playback"
 msgstr "Pausa/Continua la riproduzione"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Gestione stato"
-
 msgid "Percentage left"
 msgstr "Percentuale a sinistra"
 
@@ -6366,7 +6364,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Premere OK sul telecomando per continuare."
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Premere OK sul telecomando per attivare la skin selezionata."
 
 msgid "Press OK to activate the settings."
@@ -6380,7 +6378,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Premere OK per maggiori dettagli su %s."
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Premere OK sul telecomando per attivare la skin selezionata."
 
 msgid "Press OK to scan"
@@ -7381,6 +7379,10 @@ msgstr "Selezionare un video"
 
 msgid "Select a network adapter"
 msgstr "Selezionare una scheda di rete"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Selezionare un'attività"
 
 msgid "Select a tuner"
 msgstr "Selezionare un sintonizzatore"
@@ -9765,10 +9767,6 @@ msgstr "Aggiornamento del catalogo software in corso..."
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Timer di spegnimento"
 
 msgid "Uruguay"
 msgstr "Uruguay"
