--- a/po/lt.po
+++ b/po/lt.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PLi enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2020-06-24 23:32+0200\n"
 "Last-Translator: Audronis Grincevicius <adga45@gmail.com>\n"
 "Language-Team: Adga (C) <adga45@gmail.com>\n"
@@ -206,13 +206,6 @@ msgid_plural "%d cores"
 msgstr[0] "%d branduolys"
 msgstr[1] "%d branduoliai"
 msgstr[2] "%d branduolių"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] "%d diena"
-msgstr[1] "%d dienos"
-msgstr[2] "%d dienų"
 
 #, python-format
 msgid "%d file"
@@ -573,6 +566,26 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - numatytasis (išjungta)"
+
+#, fuzzy
+msgid "< Current >"
+msgstr "Dabartinis"
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Numatytasis + logotipas"
+
+#, fuzzy
+msgid "< Default >"
+msgstr "Numatytasis"
+
+#, fuzzy
+msgid "< Emergency >"
+msgstr "Skubus atvejis"
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Laukiama paleidimo iš naujo"
 
 msgid "<Current movielist location>"
 msgstr "<Dabartinė filmų sąrašo vieta>"
@@ -2395,9 +2408,6 @@ msgstr "Kuba"
 msgid "Curacao"
 msgstr "Kiurasao"
 
-msgid "Current"
-msgstr "Dabartinis"
-
 msgid "Current CEC address"
 msgstr "Dabartinis CEC adresas"
 
@@ -2583,9 +2593,6 @@ msgstr "Numatytosios nuostatos"
 msgid "Default timer type"
 msgstr "Numatytasis laikmačio tipas"
 
-msgid "Default+Picon"
-msgstr "Numatytasis + logotipas"
-
 msgid "Define the location of the EPG Cache file."
 msgstr "Nustatykite EPG talpyklos failo vietą."
 
@@ -2658,9 +2665,6 @@ msgstr "Ištrinti"
 msgid "Delete Image"
 msgstr "Ištrinti atvaizdą"
 
-msgid "Delete all the text"
-msgstr "Ištrinti visą tekstą"
-
 msgid "Delete entry"
 msgstr "Ištrinti įrašą"
 
@@ -2678,6 +2682,10 @@ msgstr "Ištrinti įrašą iš grojaraščio"
 
 msgid "Delete saved playlist"
 msgstr "Ištrinti išsaugotą grojaraštį"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Ištrinti visą tekstą"
 
 msgid "Delete the character to the left of text cursor"
 msgstr "Trinti simbolį teksto žymeklio kairėje"
@@ -3158,9 +3166,6 @@ msgstr "Elektroninis programų vadovas"
 
 msgid "Embedded"
 msgstr "Įterpta"
-
-msgid "Emergency"
-msgstr "Skubus atvejis"
 
 msgid "Empty slot"
 msgstr "Tuščias lizdas"
@@ -5868,9 +5873,6 @@ msgstr "Sustabdyti atkūrimą"
 msgid "Pause/Continue playback"
 msgstr "Pristabdyti/tęsti atkūrimą"
 
-msgid "Pending restart"
-msgstr "Laukiama paleidimo iš naujo"
-
 msgid "Percentage left"
 msgstr "Procentai kairėje"
 
@@ -6351,8 +6353,8 @@ msgstr "Papildomų galimybių pasirinkimui, spauskite 'MENU'."
 msgid "Press OK on your remote control to continue."
 msgstr "Spauskite OK savo valdymo pulte ir tęskite."
 
-#, python-format
-msgid "Press OK to activate the selected %s skin."
+#, fuzzy, python-format
+msgid "Press OK to activate the selected%s skin."
 msgstr "Paspauskite OK, kad suaktyvintumėte pasirinktą %s temą."
 
 msgid "Press OK to activate the settings."
@@ -6365,8 +6367,8 @@ msgstr "Spauskite OK ir redaguokite nustatymus."
 msgid "Press OK to get further details for %s"
 msgstr "Spauskite OK, kad gautumėte tolimesnes detales dėl %s"
 
-#, python-format
-msgid "Press OK to keep the currently selected %s skin."
+#, fuzzy, python-format
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Paspauskite OK, kad išlaikyti šiuo metu pasirinktą %s temą."
 
 msgid "Press OK to scan"
@@ -7366,6 +7368,10 @@ msgstr "Pasirinkite filmą"
 
 msgid "Select a network adapter"
 msgstr "Pasirinkite tinklo modulį"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Pasirinkite veiksmą"
 
 msgid "Select a tuner"
 msgstr "Pasirinkite imtuvą"
@@ -9732,9 +9738,6 @@ msgstr "Atnaujinamas programinės įrangos katalogas"
 
 msgid "Upper case"
 msgstr "Didžiosios raidės"
-
-msgid "Uptime"
-msgstr "Veikimo laikas"
 
 msgid "Uruguay"
 msgstr "Urugvajus"
