--- a/po/ro.po
+++ b/po/ro.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: tuxbox-enigma 0.0.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2010-03-09 21:03+0100\n"
 "Last-Translator: \n"
 "Language-Team: HDTV ROMANIA(superonic,costel_mbc,neutrin,otheitis,cipy_1982,neutrin,runcanion)\n"
@@ -198,12 +198,6 @@ msgstr[1] "%d servicii gasite!"
 #, python-format
 msgid "%d core"
 msgid_plural "%d cores"
-msgstr[0] ""
-msgstr[1] ""
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
 msgstr[0] ""
 msgstr[1] ""
 
@@ -552,6 +546,23 @@ msgstr ""
 
 msgid ": 0000 - default (disabled)"
 msgstr ""
+
+msgid "< Current >"
+msgstr ""
+
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Setari implicite"
+
+msgid "< Default >"
+msgstr ""
+
+msgid "< Emergency >"
+msgstr ""
+
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Asteptare / Restart"
 
 msgid "<Current movielist location>"
 msgstr ""
@@ -2432,9 +2443,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-msgid "Current"
-msgstr ""
-
 msgid "Current CEC address"
 msgstr ""
 
@@ -2635,10 +2643,6 @@ msgstr "Setari implicite"
 msgid "Default timer type"
 msgstr "Tip Timer"
 
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Setari implicite"
-
 msgid "Define the location of the EPG Cache file."
 msgstr ""
 
@@ -2712,10 +2716,6 @@ msgstr "Sterge"
 msgid "Delete Image"
 msgstr "sterge file"
 
-#, fuzzy
-msgid "Delete all the text"
-msgstr "sterge intrare playlist"
-
 msgid "Delete entry"
 msgstr "Sterge articol"
 
@@ -2737,6 +2737,10 @@ msgstr "sterge intrare playlist"
 #, fuzzy
 msgid "Delete saved playlist"
 msgstr "sterge playlist salvat"
+
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "sterge intrare playlist"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3232,9 +3236,6 @@ msgid "Electronic Program Guide"
 msgstr "Ghid Electronic de Programe (EPG)"
 
 msgid "Embedded"
-msgstr ""
-
-msgid "Emergency"
 msgstr ""
 
 msgid "Empty slot"
@@ -6053,10 +6054,6 @@ msgstr "Reluare redare"
 msgid "Pause/Continue playback"
 msgstr "Continua redarea"
 
-#, fuzzy
-msgid "Pending restart"
-msgstr "Asteptare / Restart"
-
 msgid "Percentage left"
 msgstr ""
 
@@ -6551,7 +6548,7 @@ msgid "Press OK on your remote control to continue."
 msgstr "Va rugam apasati OK de pe telecomanda pentru a continua"
 
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Apasati OK pentru a activa setarile"
 
 msgid "Press OK to activate the settings."
@@ -6565,7 +6562,7 @@ msgid "Press OK to get further details for %s"
 msgstr "Apasati OK pentru a primi detaliile urmatoare pentru %s"
 
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Apasati OK pentru a edita setarile."
 
 msgid "Press OK to scan"
@@ -7602,6 +7599,10 @@ msgstr "Alegeti un film"
 #, fuzzy
 msgid "Select a network adapter"
 msgstr "Selectare Adaptor Retea"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Alegeti un film"
 
 #, fuzzy
 msgid "Select a tuner"
@@ -10052,9 +10053,6 @@ msgid "Updating software catalog"
 msgstr ""
 
 msgid "Upper case"
-msgstr ""
-
-msgid "Uptime"
 msgstr ""
 
 msgid "Uruguay"
