--- a/po/sv.po
+++ b/po/sv.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: enigma2\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-06-24 23:29+0200\n"
+"POT-Creation-Date: 2020-06-25 13:29+0200\n"
 "PO-Revision-Date: 2017-03-05 13:24+0100\n"
 "Last-Translator: Magnus Nilsson <mag_nilsson@hotmail.com>\n"
 "Language-Team: \n"
@@ -212,12 +212,6 @@ msgid "%d core"
 msgid_plural "%d cores"
 msgstr[0] "%d kärna"
 msgstr[1] "%d kärnor"
-
-#, python-format
-msgid "%d day"
-msgid_plural "%d days"
-msgstr[0] ""
-msgstr[1] ""
 
 #, python-format
 msgid "%d file"
@@ -600,6 +594,29 @@ msgstr "9"
 
 msgid ": 0000 - default (disabled)"
 msgstr ": 0000 - standard (avstängd)"
+
+#
+#, fuzzy
+msgid "< Current >"
+msgstr "Nuvarande värde : "
+
+#
+#, fuzzy
+msgid "< Default + Picon >"
+msgstr "Grundinställningar"
+
+#
+#, fuzzy
+msgid "< Default >"
+msgstr "Grund"
+
+msgid "< Emergency >"
+msgstr ""
+
+#
+#, fuzzy
+msgid "< Pending restart >"
+msgstr "Viloläge / Omstart"
 
 #
 msgid "<Current movielist location>"
@@ -2680,11 +2697,6 @@ msgstr ""
 msgid "Curacao"
 msgstr ""
 
-#
-#, fuzzy
-msgid "Current"
-msgstr "Nuvarande värde : "
-
 msgid "Current CEC address"
 msgstr "Nuvarande CEC adress"
 
@@ -2906,11 +2918,6 @@ msgstr "Grundinställningar"
 msgid "Default timer type"
 msgstr "Radera timer"
 
-#
-#, fuzzy
-msgid "Default+Picon"
-msgstr "Grundinställningar"
-
 #, fuzzy
 msgid "Define the location of the EPG Cache file."
 msgstr "Konfigurera bildförhållandet på skärmen."
@@ -2987,11 +2994,6 @@ msgid "Delete Image"
 msgstr "Radera timer"
 
 #
-#, fuzzy
-msgid "Delete all the text"
-msgstr "Ta bort post i spellista"
-
-#
 msgid "Delete entry"
 msgstr "Ta bort kanal"
 
@@ -3014,6 +3016,11 @@ msgstr "Ta bort post i spellista"
 #
 msgid "Delete saved playlist"
 msgstr "Ta bort sparad spellista"
+
+#
+#, fuzzy
+msgid "Delete the all the text"
+msgstr "Ta bort post i spellista"
 
 msgid "Delete the character to the left of text cursor"
 msgstr ""
@@ -3581,9 +3588,6 @@ msgstr "Elektronisk Program Guide"
 #, fuzzy
 msgid "Embedded"
 msgstr "inbyggd"
-
-msgid "Emergency"
-msgstr ""
 
 msgid "Empty slot"
 msgstr ""
@@ -6672,11 +6676,6 @@ msgstr "Pausa uppspelning"
 msgid "Pause/Continue playback"
 msgstr "Pausa / Fortsätt uppspelning"
 
-#
-#, fuzzy
-msgid "Pending restart"
-msgstr "Viloläge / Omstart"
-
 msgid "Percentage left"
 msgstr "Procent Vänster"
 
@@ -7248,7 +7247,7 @@ msgstr "Tryck OK på din fjärrkontroll för att fortsätta."
 
 #
 #, fuzzy, python-format
-msgid "Press OK to activate the selected %s skin."
+msgid "Press OK to activate the selected%s skin."
 msgstr "Tryck OK för aktivera valt utseende."
 
 #
@@ -7266,7 +7265,7 @@ msgstr "Tryck OK för att få utförligare information om %s"
 
 #
 #, fuzzy, python-format
-msgid "Press OK to keep the currently selected %s skin."
+msgid "Press OK to keep the currently selected%s skin."
 msgstr "Tryck OK för aktivera valt utseende."
 
 #
@@ -8431,6 +8430,10 @@ msgstr "Välj en film"
 #
 msgid "Select a network adapter"
 msgstr "Välj en nätverksadapter"
+
+#, fuzzy
+msgid "Select a skin"
+msgstr "Välj åtgärd"
 
 #
 msgid "Select a tuner"
@@ -11159,10 +11162,6 @@ msgstr "Uppdaterar mjukvarukatalogen"
 
 msgid "Upper case"
 msgstr ""
-
-#, fuzzy
-msgid "Uptime"
-msgstr "Insomningstimer"
 
 msgid "Uruguay"
 msgstr ""
